--- a/秋招经历/面经1️⃣.md
+++ b/秋招经历/面经1️⃣.md
@@ -65,9 +65,45 @@ g++ coredumpTest.cpp -g -o coredumpTest
 
 ### 1.编译与链接过程
 
-##### 1. **一个程序从开始运行到结束的完整过程，你能说出来多少?**
+##### 1.介绍一下静态库与动态库
 
-##### 2. **静态链接与动态链接的区别？ 什么是共享库？**
++ 库是写好的现有的，成熟的，可以复用的代码。本质上是可执行代码的二进制形式。
++ 静态库（.a、.lib）和动态库（.so、.dll）。所谓静态、动态是指链接
++ 静态库：
+  + 将可重定位目标文件以一种特定的方式打包成一个单独的文件`lib**.a`，在链接时，将其内容拷贝到可执行文件中。
+  + 优点：
+    + 可执行程序中具备了执行程序需要的所有内容， 执行时运行速度快。
+  + 缺点：
+    + 每个可执行程序中都有目标文件的一份副本，会造成空间浪费
+    + 每次修改完库代码，都需要重新进行编译链接形成可执行程序，更新困难。
++ 动态库：
+  + 和静态库类似，打包成`lib.**so`文件，不同的是，在链接时仅仅“拷贝”一些重定位和符号表信息，在程序运行时完成真正的链接过程。
+  + 优点：
+    + 即使每个程序都依赖同一个库，在执行时共享同一份副本，节省了空间
+    + 更新时只需要替换原来的目标文件，而无需再重新链接一遍，更新方便
+  + 缺点：
+    + 把链接推迟到了程序运行时，所以每次执行程序都需要进行链接，会有性能损耗
+
+---
+
+##### 5. 静态链接库和动态链接库会加载在内存的哪里
+
++ 静态库在链接时与程序一起链接成可执行文件，然后在内存中装载运行：虚拟内存中分布在
+  + 代码段（.text）: 程序源代码编译后的机器指令
+  + 已初始化数据段（.data）: 已初始化了的全局变量和局部静态变量数据
+  + 未初始化段（.bss）:未初始化的全局变量和局部静态变量
++ 动态库装载在堆与栈中间的文件映射段
+
+---
+
+##### 2. **一个程序从开始运行到结束的完整过程，你能说出来多少?**
+
+> 以运行hello.c文件为例子：
+>
+> 1. 使用预处理器，将源程序 hello.c 翻译成ASCII的中间文件 hello.i		                    `gcc -E hello.c -o hello.i` 
+> 2. 使用编译器，将 hello.i 生成 汇编语言文件 hello.s                                                   `gcc -S hello.i -o hello.s`
+> 3. 使用汇编器，将 hello.s 翻译成 可执行目标文件 hello.o                                          `gcc -c hello.s -o hello.o`
+> 4. 使用连接器，将hello.o 和一些必要的系统目标文件链接成可执行文件 hello        `gcc hello.o -o hello`
 
 + 预编译： 运行C预处理器(cpp)将C的源程序 hello.c 翻译成一个ASCII码的中间文件 hello.i. 
 
@@ -104,19 +140,13 @@ g++ coredumpTest.cpp -g -o coredumpTest
 
   + 将不同的源文件产生的目标文件进行链接，从而形成一个可以执行的程序。链接分为静态链接和动态链接:
     + 静态链接：
-      + 对函数库的链接是放在编译时期完成的是静态链接 。 所有相关的目标文件与牵涉到的函数库被链接合成一个可执行文件。 所有需要的函数已复制到相关位置 。Linux下文件名为`libxxx.a`的形式 。
-      +  空间浪费：因为每个可执行程序中对所有需要的目标文件都要有一份副本，如果多个程序对同一个目标文件都有依赖，会出现同一个目标文件都在内存存在多个副本; 
-      + 更新困难：每当修改库函数代码，都需要重新进行编译链接形成可执行程序。
-      + 运行速度快：可执行程序中具备了所有执行程序所需要的任何内容， 在执行的时候运行速度快。
+      + 对函数库的链接是放在编译时期完成的是静态链接 。 所有相关的目标文件与牵涉到的函数库被链接合成一个可执行文件。Linux下文件名为`libxxx.a`的形式 。
     + 动态链接：
-      + 基本思想是把程序按照模块拆分成各个相对独立部分，库函数的链接载入推迟到程序运行时才链接在一起形成一个完整的程序，动态库文件名`lib**.so`。
-      + 共享库：即使每个程序都依赖同一个库，这多个程序在执行时共享同一份副本
-      + 更新方便：更新时只需要替换原来的目标文件，而无需将所有的程序再重新链接一遍
-      + 性能损耗：把链接推迟到了程序运行时，所以每次执行程序都需要进行链接
+      + 把程序按照模块拆分成各个相对独立部分，库函数的链接载入推迟到程序运行时才链接在一起形成一个完整的程序，动态库文件名`lib**.so`。
 
 ---
 
-##### 3. **介绍一下静态库与动态库的创建与使用**
+##### 4. **介绍一下静态库与动态库的创建与使用**
 
 + **静态库**
 
@@ -234,21 +264,9 @@ g++ coredumpTest.cpp -g -o coredumpTest
         sudo ldconfig -v
         ```
 
-
 ---
 
-##### 4. 静态链接库和动态链接库会加载在内存的哪里
-
-+ 动态链接库(Windows的.dll和Linux的.so)及静态链接库(Windows的.lib和Linux的.a)文件都按照可执行文件格式存储
-+ 静态库在编译汇编后，在链接时分成可执行文件映像，与程序一起链接成目标文件，然后进行装载运行，只要程序使用就会这么操作
-  + 代码段（.text）: 程序源代码编译后的机器指令
-  + 数据段（.data）: 已初始化了的全局变量和局部静态变量数据
-  + .bss段（.bss）:未初始化的全局变量和局部静态变量
-+ 把程序按照模块拆分成各个相对独立部分，在程序运行时才将它们链接在一起形成一个完整的程序。装载在堆与栈的中间，即MMAP位置(Memory Mapping Segment)
-
----
-
-##### 5. **gcc 与 g++ 的区别？**
+##### 6. **gcc 与 g++ 的区别？**
 
 + 从文件角度：
   + 后缀为 .c 的， gcc 把它当作是C程序， g++当作是C++程序；
@@ -2724,145 +2742,238 @@ int main() {
 
 ---
 
-### 5.内存
+### 5.物理内存与虚拟内存
+
+---
+
+CPU调度算法，页面置换算法，动态分区分配算法，用在什么场合，有哪些？
+
+---
 
 ##### 1.**虚拟技术你了解吗?**
 
-+ 虚拟技术把一个物理实体转换为多个逻辑实体。
++ 虚拟技术把一个物理实体转换为更大的逻辑实体。
 + 主要有两种虚拟技术：时(时间)分复用技术 和 空(空间)分复用技术。
-  + 多进程与多线程：多个进程能在同一个处理器上并发执行使用了时分复用技术，让每个进程轮流占用处理器，每次只执行一小个时间片并快速切换。
-  + 虚拟内存使用了空分复用技术，它将物理内存抽象为地址空间，每个进程都有各自的地址空间。地址空间的页被映射到物理内存，地址空间的页并不需要全部在物理内存中，当使用到一个没有在物理内存的页时，执行页面置换算法，将该页置换到内存中。
+  + 时分复用技术：多个进程轮流占用处理器，并发执行，每次每个进程只执行一个时间片并快速切换
+  + 空分复用技术：虚拟内存，OS为每个进程分配一套虚拟地址，使得每个进程从逻辑上都有自己独立的地址空间
 
 ---
 
 ##### 2.**虚拟内存的目的是什么?**
 
-+ 虚拟内存的目的是为了让物理内存扩充成更大的逻辑内存，从而让程序获得更多的可用内存。
-  1. 为了更好的管理内存，操作系统将内存抽象成地址空间。每个程序拥有自己的地址空间，这个地址空间被分割成多个块，每一块称为一页。
-  2. 这些页被映射到物理内存，但不需要映射到连续的物理内存，也不需要所有页都必须在物理内存中。当程序引用到不在物理内存中的页时，由硬件执行必要的映射，将缺失的部分装入物理内存并重新执行失败的指令。
-+ 所以虚拟内存允许程序不用将地址空间中的每一页都映射到物理内存，也就是说一个程序不需要全部调入内存就可以运行，这使得有限的内存运行大程序成为可能。
++ 让物理内存扩充成更大的逻辑内存，从而使得程序获得更多的可用内存。
++ OS将内存抽象成虚拟地址空间。使得每个进程从逻辑上都有自己独立的地址空间，地址空间被分割成多个页。
++ 虚拟内存允许程序不用将地址空间中的每一页都映射到物理内存，使得在有限的内存中运行大程序成为可能。
 
 ---
 
 ##### 3.谈谈你理解的逻辑地址，线性地址，物理地址和虚拟地址
 
-+ 物理地址：用于内存芯片级的单元寻址，与处理器和CPU连接的地址总线相对应。
++ 物理地址：实际存在的硬件里面的空间地址
 
-+ 虚拟地址：是相对于物理内存来进行的抽像描述。现代操作系统提供了虚拟内存。进程使用虚拟内存中的地址，由操作系统协助相关硬件，把它“转换”成真正的物理地址。
++ 虚拟地址：对物理内存的抽像描述。通过 CPU中的内存管理单元(MMU)的映射关系转换变成物理地址
 
-+ 逻辑地址：Intel为了兼容，将远古时代的段式内存管理方式保留了下来。逻辑地址指的是机器语言指令中，用来指定一个操作数或者是一条指令的地址。
-+ 线性地址：也叫虚拟地址(virtual address)。跟逻辑地址类似，也是一个不真实的地址，如果逻辑地址是对应的硬件平台段式管理转换前地址，那线性地址则对应了硬件页式内存的转换前地址。
++ 逻辑地址：也是虚拟地址。Intel为了兼容，将远古时代的段式内存管理方式保留下来。逻辑地址是硬件平台段式管理转换前的地址
++ 线性地址：也叫虚拟地址(virtual address)。跟逻辑地址类似，线性地址是硬件平台页式管理的转换前的地址。
 
 ---
 
 ##### 4.**讲解逻辑地址转换为物理地址的基本过程**
 
-如果是段⻚式，则地址变换中要得到物理地址须经过三次内存访问:
++ 逻辑地址通过 CPU 中的内存管理单元(MMU)的映射关系转换变成物理地址
+
+如果是段⻚式管理，则地址转化要经过三次内存访问:
 
 1. **访问段表，得到⻚表起始地址;**
 2. **访问⻚表，得到物理⻚号;**
 3. **将物理⻚号与⻚内位移组合，得到物理地址。**
 
-可用软、硬件相结合的方法实现段⻚式地址变换，这样虽然增加了硬件成本和系统开销，但提高了内存的利用率。
+---
+
+##### 5.⻚表项通常有哪些字段？（最重要的5个）
+
++ 页号：哪一页
++ 硬盘地址：该⻚在硬盘上的地址，通常是物理块号，供调入该⻚时使用。
++ 状态位：表示该⻚是否有效，即是否在物理内存中
++ 访问字段：记录该⻚在一段时间被访问的次数
++ 修改位：表示该⻚在调入内存后是否有被修改过，由于内存中的每一⻚都在磁盘上保留一份副本
+  + 如果没有修改，在置换该⻚时就不需要将该⻚写回到磁盘上，以减少系统的开销；
+  + 如果已经被修改，则将该⻚重写到磁盘上，以保证磁盘中所保留的始终是最新的副本。
 
 ---
 
-##### 5.什么是快表，那你知道多少关于快表的知识？
+##### 6.什么是快表，那你知道多少关于快表的知识？
 
-快表，又称联想寄存器(TLB) ，是一种访问速度比内存快很多的高速缓冲存储器，用来存放当前访问的若干页表项，以加速地址变换的过程。与此对应，内存中的页表常称为慢表。
++ 快表，又称联想寄存器(TLB) ，是一种访问速度比内存快很多的高速缓冲存储器，用来存放当前访问的若干页表项，加速地址变换的过程。
++ 与此对应，内存中的页表常称为慢表。
 
 ---
 
-##### 6.**地址变换中，有快表和没快表，有什么区别?**
+##### 7.**地址变换中，有快表和没快表，有什么区别?**
+
+有快表的话先访问快表，搜索快表中有无对应的页号
 
 + 无快表：
-  1. 算页号、页内偏移量 
+  1. 算页号(页表的索引)、页内偏移量 
   2. 检查页号合法性 
-  3. 查页表，找到页面存放的内存块号 
-  4. 根据内存块号与页内偏移量得到物理地址 
-  5. 访问目标内存单元变换
+  3. 根据页号查页表中的页表项，找到对应的物理⻚号;
+  4. 根据物理⻚号与页内偏移量得到物理地址 
+  5. 访问目标内存单元
 + 有快表：
   1. 算页号、页内偏移量 
   2. 检查页号合法性 
-  3. 查快表。若命中，即可知道页面存放的内存块号，可直接进行
-  4. 若未命中则查页表，找到页面存放的内存块号，并且将页表项复制到快表中 
-  5. 根据内存块号与页内偏移量得到物理地址 
+  3. 查快表。若命中，即可知道物理⻚号，可直接计算出物理地址
+  4. 若未命中则根据页号查页表中的页表项，找到对应的物理⻚号，并且将页表项复制到快表中 
+  5. 根据物理⻚号与页内偏移量得到物理地址 
   6. 访问目标内存单元
 
 ---
 
-##### 7.**程序从堆中动态分配内存时，虚拟内存上怎么操作的**
+##### 8.**程序从堆中动态分配内存时，虚拟内存上怎么操作的**
 
-+ 在进行动态内存分配时，例如malloc()函数，操作系统会在硬盘中创建或申请一段虚拟内存空间，并更新到页表(分配一个页表条目(PTE)，使该PTE指向硬盘上这个新创建的虚拟页)，通过PTE建立虚拟页和物理页的映射关系。
++ 在进行动态内存分配时，例如malloc()函数，操作系统会 **在硬盘中申请一段虚拟内存空间** ，分配一个页表条目(PTE)，指向硬盘上新创建的虚拟页
 
   > 页表:是一个存放在物理内存中的数据结构，它记录了虚拟页与物理页的映射关系
 
 ---
 
-##### 8.**说一下你理解中的内存?他有什么作用呢?**
+##### 9.什么是缺页异常(缺页中断)？
 
-+ 内存是用来存放数据的硬件。程序执行前需要先放入内存，然后才会被CPU进行处理
-+ 在多道程序环境下，系统中有多个程序并发执行，怎么区分各自程序内存的数据？
-  + 给内存的存储单元编地址，每个程序有自己的虚拟地址空间，会映射到不同的物理地址中。
+当 CPU 访问的⻚面不在物理内存时，会产生缺⻚中断，请求操作系统将所缺⻚调入到物理内存。
+
+缺⻚中断的处理流程：
+
+1. 在 CPU 取指执行时，去找指令所对应的⻚表项。
+2. 如果该⻚表项的状态位是「有效的」， CPU 直接访问物理内存，如果状态位是「无效的」， CPU 发送缺⻚中断请求
+3. 操作系统收到了缺⻚中断后执行缺⻚异常处理函数，查找该⻚面在磁盘中位置。
+4. 找到磁盘中对应的⻚面后，在物理内存中找空闲⻚，换入到物理内存中，将⻚表项中的状态位修改为「有效的」
+5. 最后，CPU 重新执行导致缺⻚异常的指令。
+
+>  第4步，找不到空闲⻚则说明此时内存已满了，这时需要「⻚面置换算法」选择一个有被修改过物理页(脏⻚)，把它换出到磁盘，然后把该被置换出去的⻚表项的状态改成「无效的」，最后把正在访问的⻚面装入到这个物理⻚中
+
+与一般中断的区别在:
+
++   缺⻚中断在指令执行「期间」产生和处理中断信号，而一般中断在一条指令执行「完成」后检查和处理中断信号。
++   缺⻚中断返回到该指令的开始重新执行「该指令」，而一般中断返回回到该指令的「下一个指令」执行。
 
 ---
 
-##### 9.**操作系统在对内存进行管理的时候需要做些什么**?
+##### 10.页面置换算法你知道多少？
 
-+  操作系统负责内存空间的分配与回收。
-+  操作系统需要提供某种技术从逻辑上对内存空间进行扩充。
-+  操作系统需要提供地址转换功能，负责程序的逻辑地址与物理地址的转换。
-+  操作系统需要提供内存保护功能。保证各进程在各自存储空间内运行，互不干扰
+功能：当出现缺⻚异常需调入新⻚面而内存已满时，选择物理⻚面换出到磁盘，然后把需要访问的⻚面换入到物理内存
+
+算法目标：尽可能减少⻚面的换入换出的次数，常⻅的⻚面置换算法有：
+
+1. **最佳⻚面置换算法(*OPT*)** ：淘汰以后最长时间内访问次数最少的页面
+
+   + 可以保证最低的缺页率，但操作系统无法提前预判页面访问序列。因此，最佳置换算法是无法实现的
+
+2. **先进先出置换算法(*FIFO*)** ：选择淘汰的页面是最早进入内存的页面
+
+   + 把调入内存的页面根据调入的先后顺序排成一个队列，需要换出页面时选择队头页面，队列的最大长度取决于系统为进程分配了多少个内存块。
+
+   + 经常被访问的页在FIFO算法下被反复调入和调出，会出现Belady现象。（局部性原理）
+
+     > Belady异常：当为进程分配的物理块数增大时，缺页次数不减反增的异常现象。
+
+3. **最近最久未使用的置换算法(*LRU：least recently used*)** ：淘汰的页面是最近最久未使用的页面
+
+   + 实现方法：用访问字段记录该页面自上次被访问以来所经历的时间 t 。当需要淘汰一个页面时， 选择现有页面中 t 值最大的，即最近最久未使用的页面。
+   + 该算法的实现需要寄存器和栈的硬件支持，虽然算法性能好，但是实现困难，开销大
+
+4. **时钟⻚面置换算法(*CLock*)** ：时钟置换算法是一种性能和开销较均衡的算法，又称CLOCK算法
+
+   + 为每个页面设置一个访问位，把所有的⻚面都保存在「环形链表」中，表针指向最老的⻚面。
+   + 当某页被访问时，访问位置为1。需要淘汰一个页面时，只需检查页的访问位：
+     + 如果是0，就选择该页换出
+     + 如果是1，则将它置为0，暂不换出
+   + 实现简单，算法开销小；但未考虑页面是否被修改过。
+
+5. **改进型的时钟置换算法**
+
+   + 如果被淘汰的页面没有被修改过，不需要执行I/O操作写回外存。被淘汰的页面被修改过时，才需要写回外存。
+
+   + 除了考虑一个页面最近有没有被访问过之外，操作系统还应考虑页面有没有被修改过。在其他条件都相同时，应优先淘汰没有修改过的页面，避免I/O操作。
+   + 该算法选择一个淘汰页面最多会进行四轮扫描：若用 (访问位，修改位) 的形式表述：
+     + 第一轮:淘汰(0,0) 
+     + 第二淘汰(0,1)，并将扫描过的页面访问位都置为0 
+     + 第三轮:淘汰 (0, 0) 
+     + 第四轮:淘汰(0, 1)
 
 ---
 
-##### 10.**动态分区分配算法有哪几种?可以分别说说吗?**
+##### 11.**说一下你理解中的内存?他有什么作用呢?**
 
-+ 动态分区分配：进程的实际需要动态地为之分配内存空间，使分区的大小刚好与作业的大小相等。
++ 存放数据的硬件。程序执行前需要先放入内存，然后才会被CPU进行处理
 
-+ 解决的问题是：在动态分区分配方式中，如果有很多个空闲分区都能满足需求时，应该选择哪一个分区进行分配？
+##### 12.**在多道程序环境下，系统中有多个程序并发执行，怎么区分各自程序内存的数据？**
+
++ 每个程序有自己的虚拟地址空间，给存储单元编地址，会映射到不同的物理地址中。
+
+---
+
+##### 13.**操作系统在对内存进行管理的时候需要做些什么**?
+
++  负责内存空间的分配与回收。
++  提供内存保护功能。保证各进程在各自存储空间内运行，互不干扰
++  提供技术从逻辑上对内存空间进行扩充。
++  提供地址转换功能，负责程序的逻辑地址与物理地址的转换。
+
+---
+
+##### 14.什么是动态分区分配算法？
+
++ 进程运行是需要内存空间的，在内存空闲分区找一个大小满足需求的内存分区。
+
++ 解决的问题是：如果有很多个空闲分区都能满足需求，应该选择哪一个分区进行分配？
+
+##### 15.**动态分区分配算法有哪几种?可以分别说说吗?**
 
 + 动态分区分配算法有两大类：
   + 基于索引搜索
   + 基于顺序搜索
-    +  **首次适应算法（First Fit）**：地址开始查找，找到第一个能满足大小的空闲分区。
-      + 空闲分区以地址递增次序排列。分配内存时顺序查找空闲分区链(表)，使用第一个大小满足要求的空闲分区
+    +  **首次适应算法（First Fit）**：
+      + 空闲分区以地址递增次序排列，使用第一个大小满足要求的空闲分区
     +  **邻近适应算法（Next Fit）：**
-      + 从链头开始查找会导致低地址部分出现很多小的空闲分区， 每次分配查找都经过这些分区，增加了查找的开销。如果每次都从上次查找结束的位置开始检索，就能解决上述问题。
-      + 空闲分区以地址递增的顺序排列，可排成一个循环链表。每次分配内存时从上次查找结束的位置开始查找空闲分区链(或空闲分区表)，找到大小能满足要求的第一个空闲分区。
-    +  **最佳适应算法（Best Fit）：**
-      + 动态分区分配是一种连续分配方式，为各进程分配的空间必须是连续的一整片区域。为了保证“大进程”到来时能有连续的大片空间，优先使用更小的空闲区，尽可能多地留下大片的空闲区。
-      + 空闲分区按容量递增次序链接。每次分配内存时顺序查找空闲分区链(或空闲分区表)，找到大小能满足要求的第一个空闲分区。
-    +  **最坏适应算法（Worst Fit）：**
-      + 为了解决最佳适应算法的问题，即留下太多难以利用的小碎片，可以在每次分配时优先使用最大的连续空闲区，这样分配后剩余的空闲区就不会太小，更方便使用。
-      + 空闲分区按容量递减次序链接。每次分配内存时顺序查找空闲分区链(或空闲分区表)，找到大小能满足要求的第一个空闲分区。
+      + 每次从链头开始查找会导致低地址部分出现很多小的空闲分区， 每次分配查找都经过这些分区，增加了查找的开销。
+      + 空闲分区以地址递增的顺序排列，可排成一个循环链表。每次分配内存时从上次查找结束的位置开始查找，选择第一个满足大小的空闲分区。
+    +  **最佳适应算法（Best Fit）：**（保证大作业的使用）
+      + 空闲分区按容量递增次序排列。使用大小能满足要求的第一个空闲分区。
+    +  **最坏适应算法（Worst Fit）：**（减少内存碎片）
+      + 空闲分区按容量递减次序排列。使用大小能满足要求的第一个空闲分区。
 
 ---
 
-##### 11.内存覆盖是什么？有什么特点？
+##### 16.内存覆盖是什么？有什么特点？
 
-+ 由于程序运行时并非任何时候都要访问程序及数据的各个部分，因此可以把用户空间分成为一个固定区和若干个覆盖区。将经常活跃的部分放在固定区，其余部分按照调用关系分段，将即将要访问的段放入覆盖区，其他段放在外存中，在需要调用前，系统将其调入覆盖区，替换覆盖区中原有的段。
-+ 覆盖技术的特点：是打破了必须将一个进程的全部信息装入内存后才能运行的限制，但当同时运行程序的代码量大于主存时仍不能运行，内存中能够更新的地方只有覆盖区的段，不在覆盖区的段会常驻内存。
++ 由于程序运行时并非任何时候都要访问程序及数据的各个部分，因此可以把用户空间分成为一个固定区和若干个覆盖区。
+  + 将经常活跃的部分放在固定区
+  + 其余部分按照调用关系分段
+    + 将即将要访问的段放入覆盖区
+    + 其他段放在外存中，在需要调用前，系统将其调入覆盖区，替换覆盖区中原有的段。
++ 覆盖技术的特点：
+  + 是打破了必须将一个进程的全部信息装入内存后才能运行的限制
+  + 但当同时运行程序的代码量大于主存时仍不能运行，内存中能够更新的地方只有覆盖区的段，不在覆盖区的段会常驻内存。
 
 ---
 
-##### 12.**内存交换是什么?有什么特点?**
+##### 17.**内存交换是什么?有什么特点?**
 
-+ 内存空间紧张时，系统将内存中某些进程暂时换出外存，把外存中某些已具备运行条件的进程换入内存(进程在内存与磁盘间动态调度)
++ 内存空间紧张时，系统将内存中某些进程暂时换出外存，把外存中具备运行条件的进程换入内存
 
 + 换入：把准备好竞争CPU运行的程序从辅存移到内存。 
-+ 换出：把处于等待状态(或CPU调度原则下被剥夺运行权力)的程序从内存移到辅存，把内存空间腾出来。
++ 换出：把处于等待状态的程序从内存移到辅存，把内存空间腾出来。
 
 ---
 
-##### 13.**在发生内存交换时，有些进程是被优先考虑的?你可以说一说吗?**
+##### 18.**在发生内存交换时，有些进程是被优先考虑的?你可以说一说吗?**
 
 + 优先换出阻塞进程;
-+ 换出优先级低的进程；为了防止优先级低的进程在被调入内存后很快又被换出，有的系统还会考虑进程在内存的驻留时间(注意: PCB 会常驻内存，不会被换出外存)
++ 换出优先级低的进程；为了防止优先级低的进程在被调入内存后很快又被换出，有的系统还会考虑进程在内存的驻留时间
 
 ---
 
-##### 14.**内存交换和覆盖有什么区别?**
+##### 19.**内存交换和覆盖有什么区别?**
 
 + 交换技术主要是在不同进程(或作业)之间进行
 
@@ -2870,54 +2981,52 @@ int main() {
 
 ---
 
-##### 15.**内存交换中，被换出的进程保存在哪里?**
+##### 20.**内存交换中，被换出的进程保存在哪里?**
 
-+ 保存在磁盘中，也就是外存中。
++ 保存在磁盘中，也就是外存中。在具有对换功能的操作系统中，通常把磁盘空间分为文件区和对换区两部分。
 
-+ 具有对换功能的操作系统中，通常把磁盘空间分为文件区和对换区两部分。
-
-  + 文件区主要用于存放文件，主要追求存储空间的利用率，因此对文件区空间的管理采用离散分配方式;
+  + 文件区主要用于存放文件，为了追求存储空间利用率，采用离散分配方式;
 
   + 对换区空间只占磁盘空间的小部分，被换出的进程数据就存放在对换区。
 
-    > 由于对换的速度直接影响到系统的整体速度，因此对换区空间的管理主要追求换入换出速度，因此通常对换区采用连续分配方式 。总之，对换区的I/O速度比文件区的更快。
+    > 由于对换的速度直接影响到系统的整体速度，因此通常对换区采用连续分配方式，I/O速度比文件区的更快。
+
 
 ---
 
-##### 16.**内存交换你知道有哪些需要注意的关键点吗?**
+##### 21.**内存交换你知道有哪些需要注意的关键点吗?**
 
-1. 交换需要备份存储，通常是快速磁盘，它必须足够大，并且提供对这些内存映像的直接访问。
-2. 为了有效使用CPU，需要进程执行时间比交换时间长，影响交换时间的主要是转移时间，转移时间与交换的空间内存成正比。
-3. 交换空间通常作为磁盘的一整块，且独立于文件系统，因此使用就可能很快
-
----
-
-##### 17.交换空间与虚拟内存有什么关系？
-
-+ 交换空间
-  + Linux 中的交换空间(Swap space)在 **物理内存** (RAM)被充满时被使用。如果系统需要更多的内存资源，而物理内存已经充满，内存中不活跃的页就会被移到交换空间去。
-  + 虽然交换空间可以为带有少量内存的机器提供帮助，但是这种方法不应该被当做是对内存的取代。交换空间位于硬盘驱动器上，它比进入物理内存要慢。
-  + 交换空间的总大小应该相当于你的计算机内存的两倍和 32 MB这两个值中较大的一个，但是它不能超过 2048MB(2 GB)。
-+ 虚拟内存
-  + 虚拟内存是文件数据交叉链接的活动文件。虚拟内存使用的是硬盘的空间。因为内存空间比硬盘空间小太多所以运用了虚拟内存技术，即拿出一部分硬盘空间来充 当内存使用。，
+2. 为了有效使用CPU，需要进程执行时间比交换时间长
+3. 对换区使用连续分配方式，I/O速度更快
+3. 交换需要备份存储
 
 ---
 
-##### 18.Windows和Linux环境下内存分布情况
+##### 22.交换空间与虚拟内存有什么关系？
 
-从 **低到高**  分别是 7 种不同的内存段:
+> CPU调度算法是宏观的，微观还是使用页面置换算法实现的
 
-1. 程序文件段：包括二进制可执行代码;
-2. 已初始化数据段：包括静态常量;
-3. 未初始化数据段：包括未初始化的静态变量; 
-4. 堆段：包括动态分配的内存，从低地址开始向上增长; 
-5. 文件映射段：包括动态库、共享内存等，从低地址开始向上增长(跟硬件和内核版本有关) 
-6. 栈段：包括局部变量和函数调用的上下文。栈的大小是固定的，一般是 8 MB。系统也提供了参数以便我们自定义大小
-7. 内核空间
++ 虚拟内存是对物理内存的抽象，使用置换算法将物理内存中不经常使用的部分写入磁盘，通过这种方式从逻辑上扩展系统的可用内存。当系统需要访问磁盘的部分时，会触发一个缺页异常将磁盘的部分写回物理内存。
++ 当系统的物理内存不够才使用交换空间。而交换空间对应着虚拟内存中的用来临时存储物理内存内容的磁盘空间。
 
 ---
 
-##### 19.一般情况下在Linux/windows平台下栈空间的大小
+##### 23.Windows和Linux环境下内存分布情况
+
++ 32为系统中一个由4G内存，分为3G用户空间，1G内核空间
+
++ 从 **低到高**  分别是 7 种不同的内存段:
+  1. 程序文件段(.text)：包括二进制可执行代码;
+  2. 已初始化数据段(.data)：包括静态常量;
+  3. 未初始化数据段(.bss)：包括未初始化的静态变量; 
+  4. 堆段：包括动态分配的内存，从低地址开始向上增长; 
+  5. 文件映射段：包括动态库、共享内存等，从低地址开始向上增长
+  6. 栈段：包括局部变量和函数调用的上下文。栈的大小是固定的，一般是 8 MB。
+  7. 内核空间
+
+---
+
+##### 24.一般情况下在Linux/windows平台下栈空间的大小
 
 + Linux下：非编译器决定栈大小，由操作系统环境决定，默认是8192KB(8M)
 
@@ -2935,152 +3044,71 @@ int main() {
 
 ---
 
-##### 20.**从堆和栈上建立对象哪个快?(考察堆和栈的分配效率比较)**
+##### 25.**从堆和栈上建立对象哪个快?(考察堆和栈的分配效率比较)**
 
-+ 从分配和释放方面：
-  + 堆在分配和释放时都要调用函数(malloc,free)，比如分配时会到堆空间去寻找足够大小的空间(因为多次分配释放后会造成内存碎片)，这些都会花费一定的时间，而栈却不需要这些。
-+ 从访问时间方面：
-  + 访问堆的一个具体单元，需要两次访问内存，第一次得取得指针，第二次才是真正的数据，而栈只需访问一次。
-  + 另外，堆的内容被操作系统交换到外存的概率比栈大，栈一般是不会被交换 出去的。
++ 堆在分配和释放时要调用malloc,free,分配时会到堆空间去寻找足够大小的空间，会花费一定的时间，栈不需要这些。
 
----
-
-##### 21.**常见内存分配方式有哪些?**
-
-1.  从静态存储区域分配。内存在程序编译的时候就已经分配好，这块内存在程序的整个运行期间都存在。例如全局变量，static变量。
-2. 在栈上创建。在执行函数时，函数内局部变量的存储单元都可以在栈上创建，函数执行结束时这些存储单元自动被释放。栈内存分配运算内置于处理器的指令集中，效率很高，但是分配的内存容量有限。
-3. 从堆上分配，亦称动态内存分配。程序在运行的时候用malloc或new申请任意多少的内存，程序员自己负责在何时用free或delete释放内存。动态内存的生存期由我们决定，使用非常灵活，但问题也最多。
++ 访问堆的一个具体单元，需要两次访问内存，第一次得取得指针，第二次才是真正的数据，而栈只需访问一次。
++ 另外，堆的内容被操作系统交换到外存的概率比栈大，栈一般是不会被交换出去的。
 
 ---
 
-##### 22.**常见内存分配内存错误**
+##### 26.**常见内存分配方式有哪些?**
+
+2. 在栈上创建。在执行函数时，函数内局部变量的存储单元可以在栈上创建，函数执行结束时这些存储单元自动被释放。站分配的效率很高，但是分配的内存容量有限。
+3. 从堆上分配，亦称动态内存分配。程序在运行的时候用malloc或new申请指定大小的内存，不需要时需要自己释放内存。生存期由程序员决定，使用非常灵活，但问题也最多。
+3.  从静态存储区域分配。如全局变量，static变量。内存在程序编译时就已经分配好，在程序整个运行期间都存在。
+
+---
+
+##### 27.**常见内存分配使用错误**
 
 1. 内存分配未成功，却使用了它。
-   + malloc或new申请内存，用if(p!=NULL)进行防错处理。
 2. 内存分配虽然成功，但是尚未初始化就引用它。
-   + 没有初始化的观念;
-   + 误以为内存的缺省初值全为零
-3. 内存分配成功并且已经初始化，但操作越过了内存的边界。
+3. 内存分配成功并且已经初始化，但进行了越界操作。
 4. 忘记了释放内存，造成内存泄露。
-   + 动态内存的申请与释放必须配对，malloc/free，new/delete
 5. 释放了内存却继续使用它。
 
 ---
 
-##### 23.**在执行malloc申请内存的时候，操作系统是怎么做的?**
+##### 28.**在执行malloc申请内存的时候，操作系统是怎么做的?**
 
-+ 从操作系统层面上看，malloc 是通过两个系统调用来实现的: brk和mmap
-+ 进程先通过这两个系统调用获取或者扩大进程的虚拟内存，获得相应的虚拟地址，在访问这些虚拟地址的时候，通过缺页中断，让内核分配相应的物理内存，这样内存分配才算完成。
-
-> + brk是将进程数据段(.data)的最高地址指针向高处移动，这一步可以扩大进程在运行时的堆大小 
-> + mmap是在进程的虚拟地址空间中寻找一块空闲的虚拟内存，这一步可以获得一块可以操作的堆内存。
-> + 通常，分配的内存小于128k时，使用brk调用来获得虚拟内存，大于128k时就使用mmap来获得虚拟内存。
++ 由brk、mmap(内存映射)这两个系统调用实现的;
++ malloc申请动态内存：
+  + malloc小于128k的内存使用brk分配内存，将数据段(.data)的最高地址指针_edata往高地址推
+  + malloc大于128k的内存，使用 mmap分配内存，在堆和栈之间找一块空闲内存分配
 
 ---
 
-##### 24. **抖动你知道是什么吗?它也叫颠簸现象**
+##### 29. **抖动你知道是什么吗?它也叫颠簸现象**
 
-+  刚刚换出的页面立刻换入内存，刚刚换入的页面又要换出外存，这种频繁的页面调度行为称为 **抖动，或颠簸** 。
-+  产生抖动的主要原因是：进程频繁访问的页面数目高于可用的物理块数(分配给进程的物理块不够)
++  频繁从内存与磁盘进行的页面调度行为称为 **抖动，或颠簸** 。
++  产生抖动的主要原因是：进程频繁访问的页面数目大于可用的物理块数(分配给进程的物理块不够)
    +  为进程分配的物理块太少，会使进程发生抖动现象。
    +  为进程分配的物理块太多，又会降低系统整体的并发度，降低某些资源的利用率
 
 ---
 
-##### 25.介绍一下内部碎片与外部碎片
+##### 30.介绍一下内部碎片与外部碎片
 
-+ 内碎片：分配给某些进程的内存区域中有些部分没用上，常见于固定分配方式
++ 内碎片：分配给某些进程的内存有些部分没用上，常见于固定分配方式
   + 内存总量相同，100M
   + 固定分配，将100M分割成10块，每块10M，一个程序需要45M，那么需要分配5块，第五块只用了5M， 剩下的5M就是内部碎片;
   + 分段式分配，按需分配，一个程序需要45M，就给分片45MB，剩下的55M供其它程序使用，不存在内部碎片。
-+ 外碎片：内存中某些空闲区因为比较小，而难以利用上，一般出现在内存动态分配方式中
++ 外碎片：内存中某些空闲区因为比较小，难以利用上，一般出现在内存动态分配方式中
   + 分段式分配：内存总量100M，依次分配5M，15M，50M，25M，程序运行一段时间之后，5M，15M的程序运行完毕释放内存，其他程序还在运行，需要分配一个10M供其它程序使用，就会存在5M+5M的外部碎片
 
 ---
 
-##### 26.**如何消除碎片文件** 
+##### 31.**如何消除碎片文件** 
 
-+  对于外部碎片，通过 **紧凑技术** 消除，就是操作系统不时地对进程进行移动和整理。但是这需要动态重定位寄存器地支持，且相对费时。
-+ 分⻚技术就是为了解决碎片问题，分页是把整个虚拟和物理内存空间切成一段段固定尺寸的大小。 这样一个连续并且尺寸固定的内存空间就是⻚(Page) 。
-+ 分页会出现页表过大的缺陷，这就引出了多级页表
-+ 多级⻚表虽然解决了空间上的问题，但是虚拟地址到物理地址的转换就多了几道转换的工序，这显然就降低了这俩地址转换的速度，也就是带来了时间上的开销。这就引出了TLB
-
----
-
-##### 27.⻚表项通常有哪些字段？
-
-+ 页号：
-
-+ 状态位：表示该⻚是否有效，即是否在物理内存中
-+ 访问字段：记录该⻚在一段时间被访问的次数，供⻚面置换算法选择出⻚面时参考。
-+ 修改位：表示该⻚在调入内存后是否有被修改过，由于内存中的每一⻚都在磁盘上保留一份副本
-  + 如果没有修改，在置换该⻚时就不需要将该⻚写回到磁盘上，以减少系统的开销；
-  + 如果已经被修改，则将该⻚重写到磁盘上，以保证磁盘中所保留的始终是最新的副本。
-+ 硬盘地址：用于指出该⻚在硬盘上的地址，通常是物理块号，供调入该⻚时使用。
-
----
-
-##### 28.什么是缺页异常(缺页中断)？
-
-当 CPU 访问的⻚面不在物理内存时，会产生缺⻚中断，请求操作系统将所缺⻚调入到物理内存。与一般中断的区别在:
-
-+   缺⻚中断在指令执行「期间」产生和处理中断信号，而一般中断在一条指令执行「完成」后检查和处理中断信号。
-+  缺⻚中断返回到该指令的开始重新执行「该指令」，而一般中断返回回到该指令的「下一个指令」执行。
-
-缺⻚中断的处理流程：
-
-1. 在 CPU 里访问一条 Load M 指令，然后 CPU 会去找 M 所对应的⻚表项。
-2. 如果该⻚表项的状态位是「有效的」， CPU 直接访问物理内存，如果状态位是「无效的」， CPU 发送缺⻚中断请求
-3. 操作系统收到了缺⻚中断，执行缺⻚中断处理函数，先会查找该⻚面在磁盘中位置。
-4. 找到磁盘中对应的⻚面后换入到物理内存中，换入前要在物理内存中找空闲⻚，如果找到就把⻚面换入到物理内存中
-5. ⻚面从磁盘换入到物理内存完成后，则把⻚表项中的状态位修改为「有效的」
-6. 最后，CPU 重新执行导致缺⻚异常的指令。
-
->  第4步，找不到空闲⻚则说明此时内存已满了，这时需要「⻚面置换算法」选择一个有被修改过物理页(脏⻚)，把它换出到磁盘，然后把该被置换出去的⻚表项的状态改成「无效的」，最后把正在访问的⻚面装入到这个物理⻚中
-
----
-
-##### 29.页面置换算法你知道多少？
-
-功能：当出现缺⻚异常需调入新⻚面而内存已满时，选择一个物理⻚面换出到磁盘，然后把需要访问的⻚面换入到物理⻚
-
-算法目标：尽可能减少⻚面的换入换出的次数，常⻅的⻚面置换算法有：
-
-1.  **最佳⻚面置换算法(*OPT*)** ：淘汰的页面是以后在最长时间内不再被访问的页面
-
-   + 可以保证最低的缺页率，但操作系统无法提前预判页面访问序列。因此，最佳置换算法是无法实现的
-
-2.  **先进先出置换算法(*FIFO*)** ：选择淘汰的页面是最早进入内存的页面
-
-   + 把调入内存的页面根据调入的先后顺序排成一个队列，需要换出页面时选择队头页面，队列的最大长度取决于系统为进程分配了多少个内存块。
-
-   + 经常被访问的页在FIFO算法下被反复调入和调出，会出现Belady现象。
-
-     > Belady异常：当为进程分配的物理块数增大时，缺页次数不减反增的异常现象。
-
-3.  **最近最久未使用的置换算法(*LRU：least recently used*)** ：淘汰的页面是最近最久未使用的页面
-
-   + 实现方法：用访问字段记录该页面自上次被访问以来所经历的时间 t 。当需要淘汰一个页面时， 选择现有页面中 t 值最大的，即最近最久未使用的页面。
-   + 该算法的实现需要寄存器和栈的硬件支持，虽然算法性能好，但是实现困难，开销大
-
-4.  **时钟⻚面置换算法(*CLock*)** ：时钟置换算法是一种性能和开销较均衡的算法，又称CLOCK算法
-
-   + 为每个页面设置一个访问位，把所有的⻚面都保存在一个类似钟面的「环形链表」中，表针指向最老的⻚面。
-   + 当某页被访问时，访问位置为1。需要淘汰一个页面时，只需检查页的访问位：
-     + 如果是0，就选择该页换出
-     + 如果是1，则将它置为0，暂不换出
-   + 实现简单，算法开销小；但未考虑页面是否被修改过。
-
-5.  **改进型的时钟置换算法**
-
-   + 如果被淘汰的页面没有被修改过，不需要执行I/O操作写回外存。被淘汰的页面被修改过时，才需要写回外存。
-
-   + 除了考虑一个页面最近有没有被访问过之外，操作系统还应考虑页面有没有被修改过。在其他条件都相同时，应优先淘汰没有修改过的页面，避免I/O操作。
-   + 该算法选择一个淘汰页面最多会进行四轮扫描：若用 (访问位，修改位) 的形式表述：
-     + 第一轮:淘汰(0,0) 
-     + 第二淘汰(0,1)，并将扫描过的页面访问位都置为0 
-     + 第三轮:淘汰 (0, 0) 
-     + 第四轮:淘汰(0, 1)
++  外部碎片：
+   +  利用 **紧凑技术** 消除，就是操作系统不时地对进程进行移动和整理。相对费时。
++  所有碎片：
+   +  分⻚技术，把虚拟和物理内存空间切成一段段固定的大小⻚(4k)(Page) 。
+      +  分页会出现页表过大的缺陷，这就引出了多级页表
+      +  多级⻚表虽然解决了空间上的问题，但转换就多了几道转换的工序，带来了时间上的开销。
+      +  这就引出了快表
 
 ---
 
