--- a/秋招经历/面经2️⃣.md
+++ b/秋招经历/面经2️⃣.md
@@ -2462,11 +2462,11 @@ int poll(struct pollfd *fds, nfds_t nfds, int timeout);
 
 + epoll 的优点：
 
-  + 支持ET触发模式，其余两者只支持LT。
+  + 支持ET边缘触发模式，其余两者只支持LT水平触发模式。
 
-  + 不是使用轮询的方式，不会随着fd数目的增加效率下降。只有活跃可用的fd才会调用callback函数；selet 与 poll 调用时都会对连接进行线性遍历，所以随着FD的增加会造成遍历速度慢的“线性下降性能问题”。
+  + 不是使用轮询的方式，不会随着fd数目的增加而降低效率。只有活跃可用的fd才会调用callback函数；selet 与 poll 调用时都会对连接进行线性遍历，所以随着FD的增加会造成遍历速度慢的“线性下降性能问题”。
 
-  + 使用 mmap加速内核与用户空间的消息传递
+  + 使用 mmap共享内存的方式，加速内核与用户空间的消息传递
 
     > 3者都需要内核把fd消息通知给用户空间，如何避免不必要的内存拷贝就显得尤为重要 。 
     >
