--- a/秋招经历/面经1️⃣.md
+++ b/秋招经历/面经1️⃣.md
@@ -1091,17 +1091,16 @@ g++ coredumpTest.cpp -g -o coredumpTest
 ##### 15. **GET** **与** **POST** **传递数据的最大长度能够达到多少呢?**
 
 + 实际上 HTTP 协议规范没有对URL长度进行限制
-  + 是特定的浏览器及服务器对它的限制，比如IE对URL长度的限制是2083字节(2K+35字节）
-  + 火狐浏览器无限制，此时限制取决于服务器的操作系统，若url太长，服务器可能会因为安全方面的设置从而拒绝请求或者发生不完整的数据请求。
-+ post 理论上讲是没有大小限制的，HTTP协议规范也没有进行大小限制，但实际上post所能传递的数据量大小取决于服务器的设置和内存大小
+  + 特定的浏览器及服务器对URL有限制，比如IE对URL长度的限制是2083字节(2K+35字节）
+  + 火狐浏览器无限制，但是如果url太长，服务器可能会因为安全方面的设置拒绝请求或者发生不完整的数据请求。
++ HTTP协议规范对POST也没有大小限制，但实际上post所能传递的数据大小取决于服务器的设置和内存大小
 
 ---
 
 ##### 16. **POST** **方法会产生两个** **TCP** **数据包?你了解吗?**
 
 + POST 会将 header 和 body 分开发送，先发送 header，服务端返回 100 状态码再发送 body。
-+ HTTP 协议中没有明确说明 POST 会产生两个 TCP 数据包，而且实际测试(Chrome)发现，header 和 body 不会分开发送。
-+ 所以，header 和 body 分开发送可能是部分浏览器或框架的请求方法，不属于 post 必然行为。
++ HTTP 协议中没有明确说明 POST 会产生两个 TCP 数据包，而且实际测试(Chrome)发现，header 和 body 不会分开发送。可能是部分浏览器或框架的请求方法，不属于 post 必然行为。
 
 ---
 
@@ -1166,26 +1165,24 @@ g++ coredumpTest.cpp -g -o coredumpTest
 
 ---
 
-##### 22. **一个TCP 连接中 HTTP 请求发送可以一起发送么(比如一起发三个 请求，再三个响应一起接收)?**
+##### 22. **一个TCP 连接中 HTTP 请求发送可以一起发送么(比如一起发三个请求，再三个响应一起接收)?**
+
++ HTTP/1.0铁定是不可能实现的
 
 + HTTP/1.1 中单个 TCP 连接在同一时刻只能处理一个请求，任意两个 HTTP 请求从开始到结束的时间在同一个 TCP 连接里不能重叠。
 
-  >  HTTP/1.1 存在 Pipelining 技术可以完成这个多个请求同时发送，但是由于浏览器默认关闭，所以可以认为这是不可行的.
++ HTTP2 通过多路复用技术，在同一个 TCP 连接中将多个 HTTP 请求并行进行。
 
-+ 在 HTTP/1.1 时代，浏览器是如何提高页面加载效率的呢?
-
-  + 维持和服务器已经建立的 TCP 连接，在同一连接上顺序处理多个请求。
-  + 和服务器建立多个 TCP 连接。
-
-+ HTTP2 中由于 Multiplexing 特点的存在，多个 HTTP 请求可以在同一个 TCP 连 接中并行进行。
+  > HTTP/2 把 HTTP 协议通信的基本单位缩小为帧，帧对应着逻辑流中的消息。并行地在同一个 TCP 连接上双向交换信息。
 
 ---
 
 ##### 23. **浏览器对同一 Host 建立TCP连接到的数量有没有限制?**
 
-+ 有。Chrome 最多允许对同一个 Host 建立六个 TCP 连接。不同的浏览器有一些区别。
-+ 如果资源是 HTTPS 连接并且在同一个域名下，那么浏览器在 SSL 握手之后会和服务器商量能不能用 HTTP2，如果能的话就使用 Multiplexing 功能在这个连接上进行多路传输。
-+ 如果都不能用，浏览器就会在一个 HOST 上建立多个 TCP 连接，连接数量的最大限制取决于浏览器设置
++ 有。Chrome 最多允许对同一 Host 建立六个 TCP 连接。不同浏览器有一些区别。
++ 如果资源是 HTTPS 连接并且在同一个域名下，那么浏览器在 SSL 握手之后会和服务器商量能不能用 HTTP2：
+  + 如果能的话就使用 多路复用 功能在这个连接上进行多路传输。
+  + 如果都不能用，浏览器就会在一个 HOST 上建立多个 TCP 连接，连接数量的最大限制取决于浏览器设置
 
 ---
 
