--- a/秋招经历/面经1️⃣.md
+++ b/秋招经历/面经1️⃣.md
@@ -951,8 +951,8 @@ g++ coredumpTest.cpp -g -o coredumpTest
 
 ##### 9. **简单介绍一下HTTP协议**
 
-+ 超文本传输协议HTTP是用于从万维网（WWW）服务器传输超文本到本地浏览器的传送协议。基于TCP/IP通信协议来传递数据。
-+ 浏览器作为HTTP客户端通过URL向WEB服务器发送请求，服务器端根据接收到的请求后，向客户端发送响应信息。
++ 超文本传输协议HTTP，是用于从万维网服务器传输超文本到本地浏览器的传送协议。基于TCP/IP通信协议来传递数据。
++ 流程：浏览器作为HTTP客户端通过URL向WEB服务器发送请求，服务器端根据接收到的请求后，向客户端发送响应信息。
 
 ---
 
@@ -987,7 +987,7 @@ g++ coredumpTest.cpp -g -o coredumpTest
 
   + 状态行： 协议版本、状态码，描述 ：`HTTP/1.1 200 OK`
 
-  + 下面多行消息报头：以 `头部字段名 : 值 回车符(\r)换行符(\n) `。
+  + 下面多行是消息报头：以 `头部字段名 : 值 回车符(\r)换行符(\n) `。
   + 一个空行分隔首部和内容主体
   + 响应正文
 
@@ -1038,16 +1038,17 @@ g++ coredumpTest.cpp -g -o coredumpTest
 ##### 12. **介绍一下HTTP请求行中有哪些方法？**
 
 + HTTP1.0 定义了三种请求方法: GET, POST 和 HEAD方法。
-+  HTTP1.1 新增了六种请求方法:OPTIONS、PUT、PATCH、DELETE、TRACE 和 CONNECT 方法。
-  1. GET：请求指定的页面信息，并返回实体主体。
-  2. HEAD：获取报文首部。不返回报文实体主体部分。主要用于确认 URL 的有效性以及资源更新的日期时间等。
-  3. POST：向指定资源提交数据进行处理请求。数据被包含在请求体中。
++  HTTP1.1 新增了六种请求方法:PUT、PATCH、DELETE、OPTIONS、TRACE 和 CONNECT 方法。
+  1. GET：包含在URL中，请求指定的页面信息。
+  2. POST：包含在body中，向指定的资源提交数据，进行处理请求。
+  3. HEAD：获取报文首部。不返回报文实体主体。
+     + 主要用于确认 URL 的有效性以及资源更新的日期时间等。
   4. PUT：上传文件，但存在安全性问题，一般不使用该方法。
-  5. DELETE：请求服务器删除指定的页面。
-  6. CONNECT：HTTP/1.1 协议中预留给能够将连接改为管道方式的代理服务器。
+  5. PATCH：是对 PUT 方法的补充，用来对已知资源进行局部更新 。
+  6. DELETE：请求服务器删除指定的页面。
   7. OPTIONS：允许客户端查看服务器的性能。
   8. TRACE：回显服务器收到的请求，主要用于测试或诊断。
-  9. PATCH：是对 PUT 方法的补充，用来对已知资源进行局部更新 。
+  9. CONNECT：把服务器作为跳板，访问一些只有服务器才能访问到的网站，即HTTP代理。
 
 ---
 
