--- a/秋招经历/面经1️⃣.md
+++ b/秋招经历/面经1️⃣.md
@@ -1068,16 +1068,17 @@ g++ coredumpTest.cpp -g -o coredumpTest
      + 数据在body中，URL看不到
      + POST不是幂等
 
-   > 这里的幂等性：简单来说意味着对同一URL的多个请求应该返回同样的结果。
+   > 这里的幂等性：简单来说，对同一URL的多个请求应该返回同样的结果。
 
 3. 数据大小：在HTTP规范中，没有对URL的长度和传输的数据大小进行限制。但是在实际开发过程中
 
    + 对于GET，特定的浏览器和服务器对URL的长度有限制。
-   + 对于POST，由于不是URL传值，理论上是不会受限制的，实际上服务器会对POST提交数据大小进行限制
+   + 对于POST，由于不是URL传值，理论上是不会受限制的，但实际上服务器会对POST提交数据大小进行限制
 
 4. 数据包：Get产生一个TCP数据包；Post产生两个TCP数据包。
-   对于GET，浏览器会把http header和data一并发送出去，服务器响应200（返回数据）；
-   对于POST，浏览器先发送header，服务器响应100（continue），然后再发送data，服务器响应200（返回数据）；
+
+   + 对于GET，浏览器会把http header和data一并发送出去，服务器响应200（返回数据）；
+   + 对于POST，浏览器先发header，服务器响应100（continue），再发送data，服务器响应200（返回数据）；
 
 ---
 
@@ -1091,9 +1092,10 @@ g++ coredumpTest.cpp -g -o coredumpTest
 
 ##### 15. **GET** **与** **POST** **传递数据的最大长度能够达到多少呢?**
 
-+ 实际上 HTTP 协议规范没有对URL长度进行限制
-  + 特定的浏览器及服务器对URL有限制，比如IE对URL长度的限制是2083字节(2K+35字节）
-  + 火狐浏览器无限制，但是如果url太长，服务器可能会因为安全方面的设置拒绝请求或者发生不完整的数据请求。
+GET得看浏览器和服务器限制；POST得看服务器限制。
+
++ GET请求通过URL提交，HTTP 协议规范没有对URL长度进行限制，但特定的浏览器及服务器对URL有限制，比如IE对URL长度的限制是2k字节左右(2K+35字节）。火狐浏览器无限制，但是如果url太长，服务器可能会因为安全方面的设置拒绝请求或者发生不完整的数据请求。
+
 + HTTP协议规范对POST也没有大小限制，但实际上post所能传递的数据大小取决于服务器的设置和内存大小
 
 ---
@@ -1101,7 +1103,7 @@ g++ coredumpTest.cpp -g -o coredumpTest
 ##### 16. **POST** **方法会产生两个** **TCP** **数据包?你了解吗?**
 
 + POST 会将 header 和 body 分开发送，先发送 header，服务端返回 100 状态码再发送 body。
-+ HTTP 协议中没有明确说明 POST 会产生两个 TCP 数据包，而且实际测试(Chrome)发现，header 和 body 不会分开发送。可能是部分浏览器或框架的请求方法，不属于 post 必然行为。
++ HTTP 协议中没有明确说明 POST 会产生两个 TCP 数据包，而且Chrome实际测试发现，header 和 body 不会分开发送。不属于 post 必然行为，可能是部分浏览器或框架的请求方法，。
 
 ---
 
@@ -1115,7 +1117,7 @@ g++ coredumpTest.cpp -g -o coredumpTest
 + 3XX：重定向
   + **301 Moved Permanently** ：永久性重定向
   + **302 Found** ：临时性重定向
-  + **304 Not Modified** ： 如果不满足请求行中的条件就返回这个
+  + **304 Not Modified** ： 不满足请求行中的条件
 + 4XX：客户端错误
   + **400 Bad Request** ：请求报文中存在语法错误。
   + **401 Unauthorized** ：该状态码表示发送的请求需要有认证信息（BASIC 认证、DIGEST 认证）
@@ -1123,7 +1125,7 @@ g++ coredumpTest.cpp -g -o coredumpTest
   + **404 Not Found** ： 请求资源服务器未找到
 + 5XX：服务器端错误
   + **500 Internal Server Error** ：服务器正在执行请求时发生错误。
-  + **503 Service Unavailable** ：服务器暂时处于超负载或正在进行停机维护，现在无法处理请求
+  + **503 Service Unavailable** ：请求无法到达，可能服务器暂时处于超负载或停机维护
 
 ---
 
