--- a/秋招经历/面经1️⃣.md
+++ b/秋招经历/面经1️⃣.md
@@ -919,7 +919,6 @@ g++ coredumpTest.cpp -g -o coredumpTest
 
 ##### 6. **介绍一下DNS的负载均衡策略**
 
-+ 一个网站有大量用户请求，请求的资源位于同一台机器，这台机器随时可能会蹦。
 + 为同一个主机名配置多个IP地址，在应答DNS查询时，服务器对每个查询 **将记录的IP地址按顺序返回不同的解析结果** ，将客户端的访问引导到不同的服务器，达到负载均衡的目的。
 
 ---
@@ -927,10 +926,10 @@ g++ coredumpTest.cpp -g -o coredumpTest
 ##### 7. **介绍一下动态主机配置协议DHCP**
 
 + 提供了即插即用的连网方式，让DHCP服务器自动分配IP 地址 。
-  1. 客户端发送 Discover 报文，目的地址为 255.255.255.255:67，源地址为 0.0.0.0:68，被放入 UDP 中，该报文被广播到同一个子网的所有主机上。
+  1. 客户端基于UDP发送 Discover 报文，广播到同一个子网的所有主机上。目的地址为 255.255.255.255:67，源地址为 0.0.0.0:68
   2. DHCP 服务器收到 Discover 报文之后，发送 Offer 报文给客户端，该报文包含了客户端所需要的信息
-  3. 客户端选择了某个 DHCP 服务器提供的信息，那就发送 请求报文给该 DHCP 服务器。
-  4. HCP 服务器发送 确认报文，表示客户端此时可以使用提供给它的信息。
+  3. 客户端选择某个 DHCP 服务器提供的信息，那就发送请求报文给该 DHCP 服务器。
+  4. DHCP 服务器发送 确认报文，表示客户端此时可以使用提供给它的信息配置IP地址。
 
 ---
 
@@ -2097,7 +2096,7 @@ int main(void){
 
 ---
 
-##### 27.**如何让进程后台运行**
+##### 27.==**如何让进程后台运行**==
 
 1. 命令后面加上&即可，实际上，这样是将命令放入到一个作业队列中了
 2. nohup + &，将标准输出和标准错误缺省会被重定向到 nohup.out 文件中，忽略所有挂断 (SIGHUP)信号
@@ -2120,7 +2119,7 @@ int main(void){
 
 ---
 
-##### 29.进程同步的四种方法
+##### 29.==进程同步的四种方法==
 
 1. 临界区：对临界资源进行访问的那段代码称为临界区。 
 
@@ -2179,7 +2178,7 @@ void consumer() {
 
 ---
 
-##### 31.Linux下进程通信方式
+##### 31.==Linux下进程通信方式==
 
 + 管道
   + 无名管道：半双工通信方式，数据只能单向流动，而且只在具有亲缘关系的进程(父子)之间使用。
@@ -2297,7 +2296,7 @@ void consumer() {
 
 ---
 
-##### 36.你知道共享内存吗？说一说你知道的内容
+##### 36.==你知道共享内存吗？说一说你知道的内容==
 
 + 存储映射I/O (Memory-mapped I/O) 将一个磁盘文件与存储空间中的缓冲区相映射。从缓冲区中取数据，就相当于读文件中的相应字节 。
 
@@ -2337,7 +2336,7 @@ void consumer() {
 
 ---
 
-##### 37.你知道匿名映射吗？
+##### 37.==你知道匿名映射吗？==
 
 + 映射区的缺陷：每次创建映射区一定要依赖一个文件。需要open一个temp文件，创建好了再unlink、close，麻烦。
 
@@ -2466,7 +2465,7 @@ void consumer() {
 
 ---
 
-##### 41.你知道零拷贝吗？为什么需要
+##### 41.==你知道零拷贝吗？为什么需要==
 
 + 传统 I/O 的工作方式是，读取和写入数据是从用户空间到内核空间来回复制，而内核空间的数据是通过操作系统层面的 I/O 接口从磁盘读取或写入。一般会需要两个系统调用:
 
@@ -2489,7 +2488,7 @@ void consumer() {
 
 ---
 
-##### 42.如何实现零拷贝？有哪些技术
+##### 42.==如何实现零拷贝？有哪些技术==
 
 + 零拷⻉技术实现的方式通常有 2 种: 
   + mmap + write
@@ -2551,7 +2550,7 @@ void consumer() {
 
 ---
 
-##### 44.介绍几种典型的锁，你知道哪些线程锁
+##### 44.==介绍几种典型的锁，你知道哪些线程锁==
 
 加锁的目的：保证共享资源在任意时间里只有一个线程访问，这样就可以避免多线程导致共享数据错乱的问题。
 
