--- a/秋招经历/面经2️⃣.md
+++ b/秋招经历/面经2️⃣.md
@@ -544,10 +544,9 @@ void print(char a, int b); // print_ci
 
 ##### 2.拷贝构造函数与赋值运算符重载的区别
 
-+  拷贝构造函数是函数，赋值运算符是运算符重载。
-+  拷贝构造函数会生成新的类对象，赋值运算符不能。
-+  拷贝构造函数是直接构造一个新的类对象，所以在初始化对象前不需要检查源对象和新建对象是否相同；赋值运算符需要检查是否和源对象相同，另外赋值运算符中如果原来的对象有内存分配则需要先把内存释放掉。
-+  形参传递是调用拷贝构造函数(调用的被赋值对象的拷贝构造函数)，但并不是所有出现"="的地方 都是使用赋值运算符，如下:
++  赋值运算符是运算符重载，拷贝构造函数是函数
++  赋值运算符需要检查是否和源对象相同，不相同时，如果原对象有内存分配的话，需要先把内存释放掉。拷贝构造函数是直接构造一个新的类对象，不需要比对。
++  并不是所有出现"="的地方 都是使用赋值运算符重载，新建对象使用 “=” 时会调用拷贝构造函数。
 
 ```c++
 Student s;
@@ -582,7 +581,7 @@ struct number_2{
 
 > st2所占内存并非1+4+8=13个，而是16个>13个。
 
-对齐原则： 变量按照定义顺序放到内存中，但不是紧密排列的。每一个元素放置到内存中时，它都会认为内存是以它自己的大小来划分的，放置的位置一定会在自己宽度的整数倍上开始。
++  **对齐原则： 变量按照定义顺序放到内存中时并不是紧密排列的。它都会认为内存是以它自己的大小来划分的，放置的位置一定会在自己宽度的整数倍上开始。**
 
 ```c++
 struct number_4{
@@ -594,10 +593,13 @@ struct number_4{
 
 > sizeof(st4)=12,而不是4+4+1=9。
 
-补齐原则： 在经过对齐原则分析后，检查计算出的存储单元是否为所有元素中所占内存最大的元素的长度的整数倍
++ 补齐原则： 在经过对齐原则分析后，检查计算存储单元是否为所有元素中所占内存最大的元素的长度的整数倍
+  + 是，则结束
+  + 若不是，则补齐为它的整数倍。
 
-+ 是，则结束
-+ 若不是，则补齐为它的整数倍。
++ **作用：**
+  + 移植原因：不是所有的硬件平台都能访问任意地址上的任意数据的；这样补齐对移植后操作更友好。
+  + 性能原因：程序员看来，内存是由字节组成。而CPU在读取内存时是一块块进行读取的，块的大小可以是2，4，8，16字节。经过内存对齐/补齐后，CPU的内存访问速度大大提升。
 
 
 ---
@@ -749,20 +751,19 @@ int main() {
 
 + 相同点
   + 两者都拥有成员函数、公有和私有部分
-  + 任何可以使用class完成的工作，同样可以使用struct完成
+  + 任何可以使用struct完成的工作，同样可以使用class完成
 
 + 不同点
-  + 两者中如果不对成员不指定公私有，struct默认是公有的，class则默认是私有的
-  + class默认是private继承，而struct模式是public继承
+  + struct默认成员是公有的，class则默认是私有的
+  + struct模式是public继承，class默认是private继承
   + class可以作为模板类型，struct不行
 
 ---
 
 ##### 7.C++和C的struct区别
 
-- C语言中：struct是用户自定义数据类型（UDT），是结构体；C++中struct是抽象数据类型（ADT），是类
-- C中struct是没有权限的设置的，且struct中只能是一些变量的集合体，可以封装数据却不可以隐藏数据，而且成员不可以是函数
-- C++中，struct增加了访问权限，且可以和类一样有成员函数，成员默认访问说明符为public（为了与C兼容）
+- C语言中：struct是用户自定义数据类型（UDT），是结构体；没有权限的设置的，可以封装数据却不可以隐藏数据，而且成员不可以是函数
+- C++中struct是抽象数据类型（ADT）是类，具有访问权限，具有成员函数，成员默认访问说明符为public（为了与C兼容）
 
 ---
 
@@ -775,11 +776,11 @@ int main() {
 
 + 继承权限
   + public继承：
-    + 基类的公有成员和保护成员作为派生类的成员时保持原有的状态，私有成员任然是私有，不能被派生类的子类所访问
+    + 基类的成员作为派生类的成员时保持原有的状态
   + protected继承：
     + 基类的公有成员和保护成员都成为派生类的保护成员，只能被它的派生类成员函数或友元函数访问，基类的私有成员仍然是私有的
   + private继承：
-    + 基类的所有公有成员和保护成员都成为派生类的私有成员，并不被它的派生类的子类所访问，基类的成员只能由自己派生类访问，无法再往下继承
+    + 基类的公有成员和保护成员都成为派生类的私有成员，基类的成员只能由自己派生类访问，无法再往下继承
 
 
 ---
@@ -788,15 +789,14 @@ int main() {
 
 + volatile 关键字是一种类型修饰符，在c/c++中的作用：
   + 告诉编译器不要将定义的变量优化掉。
-  + 告诉编译器总是从缓存取被修饰的变量值，而不是寄存器取值。
+  + 让编译器每次操作该变量时一定要从内存中真正取出，而不是使用已经存在寄存器中的值
 
-+  **多线程下的volatile** 
++  **多线程下使用volatile的原因** 
   + 当两个线程都用一个要改变值的变量时，用volatile声明，防止优化编译器把变量从内存装入CPU寄存器。如果变量被装入寄存器，两个线程有可能一个使用内存中的变量，一个使用寄存器中的变量，这会造成程序的错误执行。
-  + volatile的意思是让编译器每次操作该变量时一定要从内存中真正取出，而不是使用已经存在寄存器中的值。
 
-+ 被mutable修饰的变量，将永远处于可变的状态。需要在const函数里面修改一些跟类状态无关的数据成员，那么这个函数就应该被mutable来修饰，并且放在函数后后面关键字位置。
++ mutable 是为了突破 const 的限制而设置的。被 mutable 修饰的变量将永远处于可变的状态，在 const 函数中，甚至类对象是 const，其 mutable 成员也可以被修改。
 
-+ explicit关键字用来修饰类的构造函数，被修饰的构造函数的类，不能发生相应的隐式类型转换，只能以显示的方式进行类型转换。explicit 关键字作用于单个参数的构造函数。
++ explicit关键字用来修饰类的构造函数，被修饰的构造函数不能发生相应的隐式类型转换，只能以显示的方式进行类型转换。explicit 关键字作用于单个参数的构造函数。
 
 ---
 
@@ -804,8 +804,8 @@ int main() {
 
 类分为成员变量和成员函数：
 
-+ 类对象的地址就是类所包含的这一片内存空间的首地址，这个首地址也就对应具体某一个成员变量的地址。(在定义类对象的同时这些成员变量也就被定义了)
-+ 成员函数不占用对象的内存。因为函数都是存放在代码区，包括静态成员函数。静态成员函数与一般成员函数的唯一区别就是没有this指针 ，因此不能访问非静态数据成员。
++ 类对象的地址是类所包含的这一片内存空间的首地址，这个首地址对应某个成员变量的地址，不过也可能是虚指针的地址。
++ 成员函数不占用对象的内存。函数都是存放在代码区，包括静态成员函数。静态成员函数与一般成员函数的唯一区别就是没有this指针
 
 
 ```c++
@@ -842,7 +842,7 @@ int main() {
 
 + 类的非静态成员变量大小，静态成员不占据类的空间，成员函数也不占据类的空间大小; 
 + 虚函数的话，会在类对象插入vptr指针，加上指针大小;
-+ 当该该类是某类的派生类，继承的基类部分的数据成员也会存在在派生类中的空间中
++ 如果是派生类，继承的基类部分的数据成员也存在派生类的内存空间中
 
 ```c++
 class A {};
@@ -902,7 +902,7 @@ int main(){
 
 ##### 12.介绍一下this指针
 
-+ this指针是类的指针，指向对象的首地址。只能在成员函数中使用，在全局函数、静态成员函数中都不能用this。 
++ this指针是类的指针，指向对象的首地址。在成员函数中作为隐藏参数使用，在全局函数、静态成员函数中都不能用this。 
 
 
 ##### 13.this指针是什么时候创建的?
@@ -911,32 +911,30 @@ int main(){
 
 ##### 14.this 指针存放在何处? 
 
-+ this指针会因编译器不同而有不同的放置位置。可能是栈，也可能是寄存器，甚至全局变量。在
++ this指针会因编译器不同而有不同的放置位置。可能是栈，也可能是寄存器，甚至全局变量。
 
 ##### 15. **this指针是如何传递类中的函数的**
 
-+ 大多数编译器通过ecx(寄数寄存器)寄存器传递this指针。
-
-+ this是通过函数参数的首参来传递的。在调用之前，编译器会把对应的对象地址放到eax中。类在实例化时，只分配类中的变量空间，并没有为函数分配空间。自从类的函数定义完成后，它就在那儿，不会跑的.
++ this是通过成员函数参数的首参来传递的。在调用之前，编译器会把对应的对象地址放到eax（寄数寄存器）中。在类实例化时，只分配类中的成员变量空间，并没有为成员函数分配空间。自从类的函数定义完成后，它就在那儿，不会跑的.
 
 ##### 16.**每个类编译后，是否创建一个类中函数表保存函数指针，以便用来调用函数?**
 
-+ 不论是成员函数，还是静态函数都不会创建一个函数表来保存函数指针。只有虚函数才会被放到函数表中。
-+ 但是即使是虚函数，如果编译期就能明确知道调用的是哪个函数，编译器就不会通过函数表中的指针来间接调用，而是会直接利用this指针调用该函数。
++ 只有虚函数才会被放到函数表中。而且即使是虚函数，如果是静态绑定，也不会使用虚指针来调用，而是直接利用this指针调用该函数。
 
 ##### 17.在成员函数中调用delete this会出现什么问题?对象还可以使用吗?
 
-+ 当调用delete this时，类对象的内存空间被释放。在delete this之后进行的其他任何函数调用，只要不涉及到this指针的内容，都能够正常运行。一旦涉及到this指针，如操作数据成员，调用虚函数等，就会出现不可预期的问题。
++ 当调用delete this时，类对象的内存空间被释放。
++ 在delete this之后只要不涉及到this指针的内容，都能够正常运行。一旦涉及到this指针，就会出现不可预期的问题。
 
 ##### 18.如果在类的析构函数中调用delete this，会发生什么?
 
-+ 会导致堆栈溢出。delete的本质是 **“为将被释放的内存调用一个或多个析构函数，然后，释放内存”** 。显然，delete this会去调用本对象的析构函数，而析构函数中又调用delete this，形成无限递归，造成堆栈溢出，系统崩溃。
++ 会导致堆栈溢出。
++ delete的本质是 **“为将被delete的对象调用一个或多个析构函数，然后，释放内存”** 。显然，delete this会去调用本对象的析构函数，而析构函数中又调用delete this，形成无限递归，造成堆栈溢出，系统崩溃。
 
 ##### 19.**this指针调用成员变量时，堆栈会发生什么变化?**
 
-+ 当在类的非静态成员函数访问类的非静态成员时，编译器会自动将对象的地址传给作为隐含参数传递给函数，这个隐含参数就是this指针。
-
-+ 当建立了类的多个对象时，在调用类的成员函数时并不知道具体是哪个对象在调用，此可以通过查看this指针来查看具。this指针首先入栈，然后成员函数的参数从右向左进行入栈，最后函数返回地址入栈。
++ 类调用成员函数时，编译器会自动将this指针，也就是对象的地址作为隐含参数传递给函数。通过this指针就知道具体是哪个对象调用。
++ 所以，this指针首先入栈，然后成员函数的参数从右向左进行入栈，最后函数返回地址入栈。
 
 ---
 
@@ -973,15 +971,15 @@ Sales_data add (const Sales_data&, const Sales_data&);
 
 
 
-##### linux进程的内存分布
+##### ==1.linux进程的内存分布==
 
 从低地址到高地址：
 
 1. 代码段(.text)：由各个函数产生，最终经过编绎和汇编生成二进制机器代码，该部分空间只能读，不可写；
 2. 初始化数据段(.data)：包含程序中需明确地赋初值的变量
 3. 未初始化数据段(. bss:block started by symbol)，在程序执行之前，内核将该段中的数据初始化为0或空指针。
-4. 堆：就是平时所说的动态内存， `malloc/new` 来源于此。其中堆顶的位置可通过函数 `brk` 和 `sbrk`进行动态调整;
-5. 文件映射区域：如动态库、共享内存等映射物理空间的内存，一般是 `mmap` 函数所分配的虚拟地址空间。
+4. 堆：就是平时所说的动态内存， `malloc/new` 分配的内存来源于此。
+5. 文件映射区域：如动态库、共享内存mmap等映射物理空间的内存。
 6. 栈：用于维护函数调用的上下文空间，一般为 8 M ，可通过 `ulimit –s` 查看。
 7. 内核虚拟空间：用户代码不可见的内存区域，由内核管理(页表就存放在内核虚拟空间)
 
@@ -989,7 +987,7 @@ Sales_data add (const Sales_data&, const Sales_data&);
 
 ---
 
-##### ==**C程序的存储地址空间布局**==
+##### 2.==**C程序的存储地址空间布局**==
 
 + 从低地址往高地址分别为： 正文段—> 初始化数据段—> 未初始化数据段—> 堆——>栈。
 + 它们的主要作用：
@@ -1001,7 +999,7 @@ Sales_data add (const Sales_data&, const Sales_data&);
 
 ---
 
-##### ==C++的内存分区管理方式==
+##### 3.==C++的内存分区管理方式==
 
 首先说明,在C++中，内存分为5个区：堆、占、自由存储区、全局/静态存储区、常量存储区
 
@@ -1035,72 +1033,75 @@ int main(){
 
 ---
 
-##### 堆和自由存储区是不是同一块区域
+##### 4.堆和自由存储区是不是同一块区域
 
-+ 堆 是c语言和操作系统的术语。堆是操作系统所维护的一块特殊内存，提供了动态分配的功能，程序运行时调用malloc会从中分配，调用free可把内存释放。
++ 堆 是c语言和操作系统的术语。是操作系统所维护的一块特殊内存，提供了动态分配的功能，通过malloc和free从中分配和释放。
 
-+ 自由存储区是C++中通过new和delete动态分配和释放对象的抽象概念，通过new申请的内存区域可称为自由存储区。
++ 自由存储区是C++中的概念。通过new和delete动态分配和释放，通过new申请的内存区域可称为自由存储区。
 
-+  C++编译器默认用堆来实现自由存储区，缺省的全局运算符new和delete也许会按照malloc和free的方式来实现，这时由new运算符分配的对象，说它在堆上也对，说它在自由存储区也对。
++  C++编译器默认用堆来实现自由存储区
+
+  >  缺省的全局运算符new和delete会按照malloc和free的方式来实现，这时由new运算符分配的对象，说它在堆上也对，说它在自由存储区也对。
 
 ---
 
-#####  堆和栈的区别
+#####  5.==堆和栈的区别==
 
 - **申请方式不同**：栈由系统自动分配；堆是自己申请和释放的。
 - **申请大小限制不同：** 
-  - 栈顶和栈底是之前预设好的，栈是向栈底扩展，大小固定，可以通过ulimit -a查看，由ulimit -s修改；
+  - 栈是从栈顶向低地址扩展，栈顶和栈底是之前预设好的，大小固定
   - 堆向高地址扩展，是不连续的内存区域，大小可以灵活调整。
 - **申请效率不同**：栈由系统分配，速度快，不会有碎片；堆由程序员分配，速度慢，且会有碎片。
 
 ---
 
-##### ==堆和栈谁快？==
+##### 6.==堆和栈谁快？==
 
 + 栈快
 
-+ 操作系统会在底层对栈提供支持，会配专门的寄存器存放栈的地址，栈的入栈出栈操作也十分简单，并且有专门的指令执行，所以栈的效率比较高也比较快。
++ 操作系统会分配专门的寄存器存放栈的地址，入栈出栈操作也十分简单，并且由专门的指令执行，所以栈的效率比堆高。
 
-+ 堆的操作是由C/C++函数库提供的，在分配堆内存时需要一定的算法寻找合适大小的内存。并且获取堆的内容需要两次访问，第一次访问指针，第二次根据指针保存的地址访问内存，因此堆比较慢。
++ 堆的操作是由C/C++函数库提供的，在分配堆内存时需要寻找合适大小的内存。并且获取堆的内容需要两次访问，第一次访问指针，第二次根据指针保存的地址访问内存，因此堆比较慢。
 
 ---
 
-##### new / delete 与 malloc / free的异同
+##### ==7.new / delete 与 malloc / free的异同==
 
 + 相同点：
   + 都可用于内存的动态申请和释放
 + 不同点：
-  + new / delete是C++运算符，malloc / free是C/C++语言标准库函数
-  + new自动计算要分配的空间大小`new int[4]`，malloc需要手工计算`malloc(sizeof(int)*4)`
-  + new是类型安全的，在编译时会指出错误，而malloc不是
-  + new/delete是保留字，不需要头文件支持；malloc/free需要头文件库函数支持。
+  + new / delete是C++ **运算符** ，malloc / free是C/C++语言标准库函数
+  + new是类型安全的，在编译时会指出错误`bad_alloc`，而malloc不是
   + 在构造函数与析构函数角度回答
+  + new自动计算要分配的空间大小`new int[4]`，malloc需要手工计算`malloc(sizeof(int)*4)`
+  + new/delete是保留字，不需要头文件支持；malloc/free需要头文件库函数支持。
 
 ---
 
-##### new和delete是如何实现的,实现原理是什么？
+##### ==8.new和delete是如何实现的,实现原理是什么？==
 
 + new的实现过程：
-  + 先调用 **operator new** 标准库函数，分配内存保存指定类型的一个对象；
-  + 然后调用该类型的构造函数初始化构造对象；
-  + 最后返回指向新分配并构造后的的对象的指针
+  + 先调用 **operator new** 标准库函数，分配内存，然后保存一个指定类型的对象；
+  + 然后调用该类型的构造函数初始化对象；
+  + 最后返回构造后的对象的指针
 + delete的实现过程：
   + 对指针指向的对象运行对应的析构函数；
   + 然后调用 **operator delete** 标准库函数释放该对象所用内存
 
 ---
 
-##### malloc 与 free 的实现原理
+##### 9.==malloc 与 free 的实现原理==
 
-+ 标准C库提供malloc/free函数分配释放内存，这两个函数底层是由brk、mmap、munmap这些系统调用实现的;
++ 两个函数底层是由brk、mmap、munmap这些系统调用实现的;
 + malloc申请动态内存：
-  + malloc小于128k的内存使用brk分配内存，将_edata往高地址推；brk分配的内存要等到高地址内存释放以后才能释放
-  + malloc大于128k的内存，使用 mmap分配内存，在堆和栈之间找一块空闲内存分配；mmap分配的内存可以单独释放。free释放利用ummap。
-+ malloc是从堆里面申请内存，函数返回的指针是指向堆里面的一块内存。操作系统中有一个记录空闲内存地址的链表。当操作系统收到程序的申请时，就会遍历该链表，然后就寻找第一个空间大于所申请空间的堆结点，然后就将该结点从空闲结点链表中删除，并将该结点的空间分配给程序。
+  + malloc小于128k的内存使用brk分配，将_edata指针往高地址推；brk分配的内存要等到高地址内存释放以后才能释放
+  + malloc大于128k的内存，使用 mmap分配内存，在堆和栈之间的文件映射区找一块空闲内存分配；free利用ummap可以单独释放。
++ 函数返回的指针是指向堆里面的一块内存。
++ 操作系统中有一个记录空闲内存地址的链表。当操作系统收到程序的申请时，就会遍历该链表，然后就寻找第一个空间大于所申请空间的堆结点，然后就将该结点从空闲结点链表中删除，并将该结点的空间分配给程序。
 
 ---
 
-##### malloc 申请的存储空间能用delete释放吗？
+##### 10.malloc 申请的存储空间能用delete释放吗？
 
 + 不能，malloc/free，new和delete 按照要求是需要对应使用的
 + malloc/free不能执行构造函数与析构函数
@@ -1108,43 +1109,42 @@ int main(){
 
 ---
 
-##### ==new 与 malloc 的区别==
+##### 11.==new 与 malloc 的区别==
 
 + malloc和free是标准库函数，支持覆盖；new和delete是运算符，并且支持重载。
-+ malloc仅仅分配内存空间，free仅仅回收空间，不具备调用构造函数和析构函数功能，用malloc分配空间存储类的对象存在风险；new和delete除了分配回收功能外，还会调用构造函数和析构函数。
-+ malloc和free返回的是void类型指针（必须进行类型转换），new和delete返回的是具体类型指针。
++ malloc/free仅仅分配和回收内存空间，不具备调用构造函数和析构函数功能；new/delete除了分配回收功能外，还能调用构造函数和析构函数
++ malloc返回的是void类型指针（必须进行类型转换），new返回的是具体类型指针。
 
 ---
 
-##### delete和delete[]区别？
+##### 12.delete和delete[]区别？
 
 + delete只会调用一次析构函数。
-+ delete[]会调用数组中从后往前调用每个元素的析构函数。
++ delete[]会从后往前调用数组中每个元素的析构函数。
 
 ---
 
-##### delete[] 怎么知道释放内存的大小的
+##### 13.delete[] 怎么知道释放内存的大小的
 
-+ 需要在 new [] 一个对象数组时，需要保存数组的维度
-+ C++ 的做法是在分配数组空间时多分配了 4 个字节的大小，专门保存数组的大小，在 delete [] 时就可以取出这个保存的数，就知道了需要调用析构函数多少次了。
++ C++ 的做法是在 **new操作** 分配数组空间时多分配了 4 个字节专门保存数组的大小，在 delete [] 时就可以取出这个保存的数，就知道了需要调用析构函数多少次了。
 
 ---
 
-##### ==既然有了malloc/free，C++中为什么还需要new/delete?==
+##### 14.==既然有了malloc/free，C++中为什么还需要new/delete?==
 
 + malloc/free和new/delete都是用来申请内存和回收内存的。 
-+ 在对非基本数据类型的对象使用的时候，对象创建的时候还需要执行构造函数，销毁的时候要执行析构函数。malloc/free是库函数，是已经编译的代码，不能把构造函数和析构函数的功能强加给 malloc/free，所以new/delete 是必不可少的。
++ C++中创建对象的时候还需要执行构造函数，销毁的时候要执行析构函数。而malloc/free是库函数，是已经编译的代码，不能把构造函数和析构函数的功能强加给它们，所以new/delete 是必不可少的。
 
 ---
 
-##### 被free回收的内存是立即返还给操作系统吗？
+##### ==15.被free回收的内存是立即返还给操作系统吗？==
 
-+ 不是的，被free回收的内存会首先被ptmalloc使用双链表保存起来，当用户下一次申请内存的时候，会尝试从这些内存中寻找合适的返回。
-+ 这样就避免了频繁的系统调用，占用过多的系统资源。同时ptmalloc 也会尝试对小块内存进行合并，避免过多的内存碎片。
++ 不是的，被free回收的内存会首先被ptmalloc使用双链表保存起来，当用户下一次申请内存时会先从链表中寻找合适的返回。这样就避免了频繁的系统调用，占用过多的系统资源。
++ 同时ptmalloc 也会尝试对小块内存进行合并，避免过多的内存碎片。
 
 ---
 
-##### 有几种类型的new
+##### 16.有几种类型的new
 
 +  **plain new** ：普通的new，常用的new
 
@@ -1164,9 +1164,9 @@ int main(){
   char *p = new(nothrow) char[10e11];
   ```
 
-+  **placement new** ：允许在一块已经分配成功的内存上重新构造对象或对象数组。
++  ==**placement new**== ：允许在一块已经分配成功的内存上重新构造对象或对象数组。
 
-  + 主要用途是反复使用一块较大的动态分配的内存来构造不同类型的对象或者他们的数组
+  + 主要用途是反复使用一块较大的动态分配的内存来构造不同类型的对象或对象数组
   + placement new构造起来的对象数组，要显式的调用他们的析构函数来销毁（析构函数并不释放对象的内存），不要使用delete，因为placement new构造起来的对象或数组大小并不一定等于原来分配的内存大小，使用delete会造成内存泄漏或者之后释放内存时出现运行时错误。
 
   ```c++
@@ -1182,7 +1182,7 @@ int main(){
 
 ---
 
-##### C++中NULL和nullptr区别
+##### ==17.C++中NULL和nullptr区别==
 
 + NULL在C++中存在二义性，宏定义为`#define NULL 0`，既是整数，也是一个指针。作为实参传给形参为`void* p`是会报二义性错误。
 + C++ 11为了解决这个问题而提出了 nullptr ，若想使用整数特性，就赋值为0，若想使用指针特性，就赋值为nullptr
@@ -1190,7 +1190,7 @@ int main(){
 
 ---
 
-##### allocator作用
+##### 18.allocator作用
 
 + C++中new首先会分配内存，然后自动的完成对象构造
 + allocator将这两部分拆开，可以先分配对象，在需要构造时利用 construt 进行构造
@@ -1207,7 +1207,7 @@ cout << base[0] << base[1];
 
 ---
 
-##### 深拷贝和浅拷贝的却别
+##### ==19.深拷贝和浅拷贝的区别==
 
 + 浅拷贝只是拷贝一个指针，没有新开辟一个地址，拷贝的指针和原来的指针指向同一块地址，如果原来的指针所指向的资源释放了，再释放浅拷贝的指针的资源就会出现错误。
 + 深拷贝不仅拷贝值，还开辟出一块新的空间用来存放新的值，即使原先的对象被析构掉，释放内存了也不会影响到深拷贝得到的值。
@@ -1215,14 +1215,14 @@ cout << base[0] << base[1];
 
 ---
 
-##### 什么是对象复用，零拷贝技术，C++中哪里用到了
+##### ==20.什么是对象复用，零拷贝技术，C++中哪里用到了==
 
 + 对象复用：
-  + 对象复用其本质是 享元 设计模式。 通过将对象存储到“对象池”中实现对象的重复利用，可以避免多次创建重复对象的开销，节约系统资源。
+  + 对象复用其本质是 享元 设计模式。 通过将对象存储到“对象池”中实现对象的重复利用，可以避免多次重复创建对象的开销，节约系统资源。
 + 零拷贝技术：
   + 避免 CPU 将数据从一块存储拷贝到另外一块存储的技术。可以减少数据拷贝和共享总线操作的次数。
   + vector的一个成员函数 **emplace_back() **很好地体现了零拷贝技术
-    + 使用 **push_back() **函数需要调用拷贝构造函数和转移构造函数，
+    + 使用 **push_back() **函数需要调用拷贝构造函数和移动构造函数，
     + 使用 **emplace_back()** 插入的元素原地构造，不需要触发拷贝构造和转移构造，效率更高
 
 ---
@@ -1506,7 +1506,13 @@ public:
 
 ##### 18.什么是编译时绑定和运行时绑定？
 
-+ 虚函数才有运行时绑定，使用指针/引用调用虚函数时，由运行时的对象类型决定调用哪个虚函数：this->vptr->vtable[i]->vfunc
++ 使用指针/引用调用虚函数，并且进行了向上转型时，由运行时的对象类型决定调用哪个虚函数：this->vptr->vtable[i]->vfunc
+
+  ```c
+  child* c = new Parent();
+  c->virtualFunc();
+  ```
+
 + 普通成员函数： 在编译期间就已经知道函数的版本，直接定位到类中的方法。
 
 ---
@@ -1710,7 +1716,7 @@ int main(){
 
 ---
 
-##### 26.静态函数能定义为虚函数吗？
+##### 36.静态函数能定义为虚函数吗？
 
 + static成员不属于任何类对象或类实例，即使给此函数加上virutal也是没有任何意义的。
 + 虚函数的调用关系:this -> vptr -> vtable ->virtual function。静态成员函数没有this指针，无法调用虚函数
