--- a/秋招经历/面经1️⃣.md
+++ b/秋招经历/面经1️⃣.md
@@ -872,11 +872,468 @@ g++ coredumpTest.cpp -g -o coredumpTest
 
 ### 3.应用层
 
+#### 基本介绍
 
+##### 1. **应用层的功能是什么？**
+
++ 利用应用层相关的协议来为下层网络提供服务。
 
 ---
 
-##### 38. **如何保证公钥不被篡改?**
+##### ==2.**应用层中分别基于TCP，UDP的协议**==
+
++ TCP：
+  + HTTP协议(80端口)
+  + FTP(21端口)：
+    + 提供在服务器和客户机之间上传和下载文件的有效方式。基于TCP的传输，采用双TCP连接方式；支持授权与认证机制，提供目录列表功能
+  + Telnet：它是一种用于远程登陆的协议,23端口 
++ UDP：
+  + DNS：用于域名解析服务，用的是53号端口 
+  + DHCP：动态主机配置协议，客户端发送消息到DHCP服务器的67号端口，服务器返回消息给客户端的68号端口。
+  + TFTP(Trival File Transfer Protocal)：简单文件传输协议，69
+
+---
+
+##### 3.**介绍一下动态主机配置协议DHCP（Dynamic Host Configuration Protocol）**
+
++ 提供了即插即用的连网方式，让DHCP服务器自动分配IP 地址 。
+
+  1. 客户端基于UDP发送 Discover 报文，广播到同一个子网的所有主机上。
+
+     >  目的地址为 255.255.255.255:67，源地址为 0.0.0.0:68
+
+  2. DHCP 服务器收到后发送 Offer 报文，其中包含了客户端所需要的信息
+
+  3. 客户端受到后，选择其中某个消息，再发送请求报文。
+
+  4. DHCP 服务器受到后发送确认报文，表示此时可以使用提供给客户端的IP地址。
+
+---
+
+#### DNS介绍
+
+##### 1.**介绍一下域名解析系统 DNS（Domain Name System）**
+
++ 它是一个分布式数据库，提供域名和 IP 地址相互转换的服务。
++ DNS 可以使用 UDP 或 TCP 进行传输，端口号都为 53。多数情况使用 UDP 。
+
+---
+
+##### ==2.**介绍一下域名解析系统的工作方式：**==
+
+1. 输入域名后，浏览器先检查缓存中是否有域名映射的ip地址，有解析结束。
+2. 若无，则检查操作系统缓存(如Windows的hosts)中有无解析过的结果，有解析结束。
+3. 若无，则向 **本地DNS服务器** 进行查询，找到对应的IP地址映射或者缓存信息则结束。
+4. 若无，则根据 **本地DNS服务器设置的转发器** 进行查询：
+   + 未用转发模式：(迭代查询)
+     + 本地DNS就把请求发至根DNS进行迭代查询，根服务器收到请求后会判断域名由谁授权管理，返回负责管理的顶级域名服务器IP。
+     + 本地DNS服务器收到IP后，联系负责域名管理的服务器，若无法解析，它会找下一级服务器地址给本地DNS。本地服务器收到IP后继续联系域名域服务器，重复上面动作，直至找到域名对应的ip地址返回给主机
+   + 使用转发模式：（递归查询）
+     + 本地DNS服务器把请求转发至上一级DNS服务器进行递归查询，若不能解析，把请求转至上上级，以此循环，直至找到并原路回来。最后DNS服务器把结果再返回给客户机
+
+---
+
+##### 3.**为什么域名解析基本上使用 UDP 协议？**
+
++  UDP的DNS协议只要一个请求、一个应答就好了。TCP需要三次握手建立连接
+
+---
+
+##### 4.**哪些时候DNS使用 TCP 协议？**
+
++ 如果返回的响应报文大小超过的 512 字节（UDP 最大只支持 512 字节的数据）。
++ 主域名服务器向辅助域名服务器进行 区域传送， 发送数据时。从主DNS服务器上复制内容需要进行可靠传输。
+  + 因为TCP协议可靠性好，而且同步的数据可能大于512字节。
+
+---
+
+##### 5.**介绍一下DNS的负载均衡策略**
+
++ 为同一个主机名配置多个IP地址，在应答DNS查询时，服务器根据一些设置，比如根据地区分配，将客户端的访问引导到不同的服务器，达到负载均衡的目的。
+
+---
+
+#### HTTP分析 
+
+#####  1.**简单介绍一下HTTP协议**
+
++ 超文本传输协议HTTP，是用于从万维网服务器传输超文本到本地浏览器的传送协议。基于TCP/IP协议传递数据。
+
+---
+
+##### 2. ==**HTTP长连接和短连接的区别**==
+
++ 在HTTP/1.0中默认使用短连接。客户端和服务器每进行一次HTTP操作，就建立一次连接， 任务结束就中断连接。
++ 在HTTP/1.1起，默认使用长连接，用以保持连接特性。
+
+---
+
+##### 3.**一个TCP连接可以对应几个HTTP请求?**
+
++ 在HTTP/1.0中，因为使用短连接。一个连接对应一个HTTP请求，每进行一次HTTP操作，就建立一次连接，。
++ 在HTTP/1.1中，，使用长连接用以保持连接特性，一个连接可以对应多个HTTP请求。
+
+---
+
+#####  4.**一个TCP 连接中 HTTP 请求发送可以一起发送么(比如一起发三个请求，再三个响应一起接收)?**
+
++ HTTP/1.0铁定是不可能实现的
+
++ HTTP/1.1 中单个 TCP 连接在同一时刻只能处理一个请求，多个 HTTP 请求只能按顺序处理，不能并行操作。
+
++ HTTP2 通过多路复用技术，在同一个 TCP 连接中将多个 HTTP 请求并行处理。
+
+  > HTTP/2 把 HTTP 协议通信的信息切割成为帧，并行地在同一个 TCP 连接上双向交换信息。
+
+---
+
+#####  5.**浏览器对同一 Host 建立TCP连接到的数量有没有限制?**
+
++ 有。不同浏览器有一些区别。Chrome 最多允许对同一 Host 建立六个 TCP 连接。
++ 而且得看是使用什么版本的HTTP：
+  + 如果使用HTTP/2，同过 多路复用 可以在一个TCP连接中同时处理传输多个HTTP请求。
+  + 是使用HTTP/1.1，浏览器能在一个 HOST 上建立多个 TCP 连接，连接数量的最大限制取决于浏览器设置
+
+---
+
+##### ==6.**浏览器在与服务器建立了一个** **TCP** **连接后是否会在一个** **HTTP** **请求完成后断开?什么情况下会断开?**==
+
++ 在 HTTP/1.0 中，因为短连接，一个服务器在发送完一个 HTTP 响应后，会断开链接。这样开销代价过大。
++ HTTP/1.1 使用长链接，浏览器和服务器之间是会维持一段时间的 TCP 连接，当请求报头中声明 Connection: close 才会在请求完成后关闭连接
+
+---
+
+##### 7. **介绍一下 HTTP 请求报文与响应报文**
+
++ 客户端发送请求报文给服务器，服务器处理报文中的请求操作信息，并将处理结果放入响应报文中返回给客户端。
+
++ 请求报文结构：
+
+  + 请求行：请求方法、URL、协议版本 `GET http://www.example.com/ HTTP/1.1`
+  + 下面多行是请求头部，以 `头部字段名 : 值 回车符(\r)换行符(\n) `。
+  + 空行：分隔 头部 和 内容主题
+  + 请求的内容主体
+
+  ```http
+  GET http://www.example.com/ HTTP/1.1
+  Accept: text/html,application/xhtml+xml,application/xml;q=0.9,image/webp,image/apng,*/*;q=0.8,application/signed-exchange;v=b3;q=0.9
+  Accept-Encoding: gzip, deflate
+  Accept-Language: zh-CN,zh;q=0.9,en;q=0.8
+  Cache-Control: max-age=0
+  Host: www.example.com
+  If-Modified-Since: Thu, 17 Oct 2019 07:18:26 GMT
+  If-None-Match: "3147526947+gzip"
+  Proxy-Connection: keep-alive
+  Upgrade-Insecure-Requests: 1
+  User-Agent: Mozilla/5.0 xxx
+  
+  param1=1&param2=2
+  ```
+
++ 响应报文结构：
+
+  + 状态行： 协议版本、状态码，描述 ：`HTTP/1.1 200 OK`
+
+  + 下面多行是响应头部：以 `头部字段名 : 值 回车符(\r)换行符(\n) `。
+  + 一个空行分隔首部和内容主体
+  + 响应正文
+
+  ```http
+  HTTP/1.1 200 OK
+  Age: 529651
+  Cache-Control: max-age=604800
+  Connection: keep-alive
+  Content-Encoding: gzip
+  Content-Length: 648
+  Content-Type: text/html; charset=UTF-8
+  Date: Mon, 02 Nov 2020 17:53:39 GMT
+  Etag: "3147526947+ident+gzip"
+  Expires: Mon, 09 Nov 2020 17:53:39 GMT
+  Keep-Alive: timeout=4
+  Last-Modified: Thu, 17 Oct 2019 07:18:26 GMT
+  Proxy-Connection: keep-alive
+  Server: ECS (sjc/16DF)
+  Vary: Accept-Encoding
+  X-Cache: HIT
+  
+  <!doctype html>
+  <html>
+  <head>
+      <title>Example Domain</title>
+  	// 省略... 
+  </body>
+  </html>
+  ```
+
+---
+
+##### 8.HTTP 有哪些首部字段？
+
++ 四种类型的首部字段：
+  + 通用首部字段
+    + Connection:是否持久化连接
+  + 请求首部字段
+    + Cookie：传输给服务器Session
+  + 响应首部字段
+    + SetCookie：服务器传给浏览器 Session ID
+  + 实体首部字段
+    + Last-Modified：资源最后的修改时间
+
+---
+
+#### HTTP请求中的知识点
+
+##### 1. ==介绍一下HTTP请求行中有哪些方法？==
+
++ HTTP1.0 定义了三种请求方法: GET, POST 和 HEAD方法。
++ HTTP1.1 新增了六种请求方法:PUT、PATCH、DELETE、OPTIONS、TRACE 和 CONNECT 方法。
+  1. GET：包含在URL中，请求指定的页面信息。
+  2. POST：包含在body中，向指定的资源提交数据，进行处理请求。
+  3. HEAD：获取报文首部。不返回报文实体主体。
+     + 主要用于确认 URL 的有效性以及资源更新的日期时间等。
+  4. PUT：上传文件，但存在安全性问题，一般不使用该方法。
+  5. PATCH：是对 PUT 方法的补充，用来对已知资源进行局部更新 。
+  6. DELETE：请求服务器删除指定的页面。
+  7. OPTIONS：允许客户端查看服务器的性能。
+  8. TRACE：回显服务器收到的请求，主要用于测试或诊断。
+  9. CONNECT：把服务器作为跳板，访问一些只有服务器才能访问到的网站，即HTTP代理。
+
+---
+
+##### 2. ==**GET与POST的区别是什么？**==
+
+1. 提交方式：
+
+   + Get方式在通过URL提交数据，数据在URL中可以看到；
+   + POST方式，数据放置在body体内提交
+
+2. 安全性：
+
+   +  Get 提交时，
+     + 参数会显示在地址栏上；
+     + Get是幂等的，如果是增数据操作，在网络不好的隧道中如果尝试重试，会有重复操作的风险
+   + Post 提交时
+     + 数据在body中，URL看不到
+     + POST不是幂等
+
+   > 这里的幂等性：简单来说，对同一URL的多个请求应该返回同样的结果。
+
+3. 数据大小：在HTTP规范中，没有对URL的长度和传输的数据大小进行限制。但是在实际开发过程中
+
+   + 对于GET，特定的浏览器和服务器对URL的长度有限制。
+   + 对于POST，由于不是URL传值，理论上是不会受限制的，但实际上服务器会对POST提交数据大小进行限制
+
+4. 数据包：Get产生一个TCP数据包；Post产生两个TCP数据包。
+
+   + 对于GET，浏览器会把http header和data一并发送出去，服务器响应200（返回数据）；
+   + 对于POST，浏览器先发header，服务器响应100（continue），再发送data，服务器响应200（返回数据）；
+
+---
+
+##### 3. **POST 方法比 GET 方法安全?**
+
++ 有人说POST 比 GET 安全，因为数据在地址栏上不可见。
++ 从传输的角度来说，HTTP 在网络上是明文传输的，只要在网络节点上捉包就能完整地获取数据报文，都不安全。
++ 要想安全传输，就只有加密，也就是 HTTPS。
+
+---
+
+##### 4. **GET** **与** **POST** **传递数据的最大长度能够达到多少呢?**
+
+GET得看浏览器和服务器限制；POST得看服务器限制。
+
++ GET请求通过URL提交，HTTP 协议规范没有对URL长度进行限制，但特定的浏览器及服务器对URL有限制，比如IE对URL长度的限制是2k字节左右(2K+35字节）。火狐浏览器无限制，但是如果url太长，服务器可能会因为安全方面的设置拒绝请求或者发生不完整的数据请求。
+
++ HTTP协议规范对POST也没有大小限制，但实际上post所能传递的数据大小取决于服务器的设置和内存大小
+
+---
+
+##### 5. **POST** **方法会产生两个** **TCP** **数据包?你了解吗?**
+
++ POST 会将 header 和 body 分开发送，先发送 header，服务端返回 100 状态码再发送 body。
++ HTTP 协议中没有明确说明 POST 会产生两个 TCP 数据包，而且Chrome实际测试发现，header 和 body 不会分开发送。不属于 post 必然行为，可能是部分浏览器或框架的请求方法，。
+
+---
+
+##### 6.**介绍一下URL？**
+
++  URL是uniform resource locator，统一资源定位器
+  + 具体的URI，指明了如何定位资源。
+    + 协议
+    + 存有该资源的主机IP地址(有时也包括端口号)
+    + 主机资源的具体地址。如目录和文件名等
+
++ URI，是uniform resource identifier，统一资源标识符，用来唯一的标识一个资源。
+  + 访问资源的命名机制
+  + 存放资源的主机名
+  + 资源自身的名称，由路径表示，着重强调于资源。
+
+---
+
+#### HTTP响应中的知识点
+
+##### 1.**介绍一下 HTTP 的状态码有哪些？**
+
++ 1XX：信息
+  + **100 Continue** ：表明到目前为止都很正常，客户端可以继续发送请求或者忽略这个响应。
++ 2XX：成功
+  + **200 OK**
+  + **204 No Content** ：请求已经成功处理，返回的响应报文不包含实体的主体部分。
++ 3XX：重定向
+  + **301 Moved Permanently** ：永久性重定向
+  + **302 Found** ：临时性重定向
++ 4XX：客户端错误
+  + **400 Bad Request** ：请求报文中存在语法错误。
+  + **401 Unauthorized** ：无权限
+  + **403 Forbidden** ：请求被拒绝。
+  + **404 Not Found** ： 请求资源服务器未找到
++ 5XX：服务器端错误
+  + **500 Internal Server Error** ：服务器正在执行请求时发生错误。
+  + **503 Service Unavailable** ：请求无法到达，可能服务器暂时处于超负载或停机维护
+
+---
+
+#### HTTP缓存
+
+##### 1. **为什么服务器会缓存这一项功能?如何实现的?**
+
++ 原因：
+  + 缓解服务器压力;
+  + 降低客户端获取资源的延迟：缓存通常位于内存中，读取缓存的速度更快。
++ 实现：
+  + 让客户端浏览器进行缓存
+  + 让代理服务器进行缓存
+
+---
+
+##### 2. **HTTP中缓存的私有和共有字段?知道吗?**
+
++ private 指令规定了将资源作为私有缓存，只能被单独用户使用，一般存储在用户浏览器中。
+
+  `Cache-Control: private`
+
++ public 指令规定了将资源作为公共缓存，可以被多个用户使用，一般存储在代理服务器中
+
+  `Cache-Control: public`
+
+---
+
+##### 3. **HTTP** **如何禁用缓存?如何确认缓存?** 
+
++ HTTP/1.1 通过 Cache-Control 首部字段来控制缓存。
+
+  + 禁用缓存： no-store 指令规定不能对请求或响应的任何一部分进行缓存
+
+    `Cache-Control: no-store`
+
+  + 确认缓存： no-cache 指令规定 **缓存服务器需要先向源服务器验证缓存资源的有效性，只有当缓存资源有效时才能使用该缓存对客户端的请求进行响应。**
+
+    `Cache-Control: no-cache`
+
+---
+
+#### HTTP的发展与比较
+
+> + 1991 http/0.9
+> + 1996  http/1.0
+> + 1997  http/1.1
+> + 2012  http/2.0
+
+##### 1.==**HTTP1.0和HTTP1.1的区别?**==
+
++  **长连接** ：
+   +  HTTP/1.0 默认短连接
+   +  HTTP/1.1支持 **长连接** 和 请求的流水线处理 ，在一个TCP连接上可以传送多个HTTP请求和响应
++  **宽带节约：**
+   +  HTTP 1.1支持只发送header信息，如果服务器认为客户端有权限请求服务器，则返回100，否则返回401。
+      +  如果接收到100，才开始把请求body发送到服务器。
+      +  如果接收到401，客户端就可以不用发送请求body了，节约了带宽。
++  **Host头处理**：
+   +  HTTP1.0中认为每台服务器都绑定一个唯一的IP地址，请求消息中的URL并没有传递主机名。
+   +  HTTP1.1的请求和响应都应支持Host头域，请求消息中没有Host头域会报告错误（400 Bad Request）
+      +  但随着虚拟主机技术的发展，在一台物理服务器上可以存在多个虚拟主机（Multi-homed Web Servers），并且它们共享一个IP地址。HOST用来区分是哪些虚拟主机。
+
+---
+
+##### 2.==**HTTP1.1和 HTTP2.0的区别？**==
+
++  **协议解析方式**： 
+   +  HTTP1.1的协议解析是基于文本。文本的表现形式有多样性，存在天然缺陷，要做到健壮性考虑的场景必然很多。
+   +  HTTP2.0的协议解析采用二进制格式，只有0和1的组合，实现方便且健壮。
++  **多路复用**：
+   +  通过多路复用技术，把 HTTP 协议通信的信息切割成为帧，并行地在同一个 TCP 连接上双向交换信息。实现了在同一个 TCP 连接中并行处理多个 HTTP 请求。
++   **数据压缩：**
+   +  HTTP1.1不支持header数据的压缩
+   +  HTTP2.0使用HPACK算法对header的数据进行压缩，在网络上传输就会更快。
+
+----
+
+##### 3.==**什么是HTTPS，为什么需要HTTPS？**==
+
++ 原因：HTTP 有以下安全性问题：
+  - 使用明文进行通信，可能会被窃听；
+  - 不验证通信方的身份，可能遭遇伪装；
+  - 无法证明报文的完整性，可能遭遇篡改。
++ HTTPS 是让 HTTP 先和 SSL（Secure Sockets Layer）通信，再由 SSL 和 TCP 通信，也就是将SSL作为隧道进行通信
++ 通过使用 SSL，HTTPS 具有了加密（防窃听）、认证（防伪装）和完整性保护（防篡改）。
+
+---
+
+#####  ==4.HTTPS 和 HTTP的区别==
+
+|              | HTTP               | HTTPS                                   |
+| ------------ | ------------------ | --------------------------------------- |
+| 端口         | 80                 | 443                                     |
+| 安全性       | 无加密，安全性较差 | 有加密机制，安全性较高                  |
+| 资源消耗     | 较少               | 由于加密处理，资源消耗更多              |
+| 是否需要证书 | 不需要             | 需要                                    |
+| 协议         | 运行在TCP协议之上  | 运行在SSL协议之上，SSL运行在TCP协议之上 |
+
+---
+
+#####  5.==什么是 SSL/TLS?==
+
++ SSL代表安全套接字层。是用于加密和验证应用程序(如浏览器)和Web服务器之间发送的数据。
++ 基本思路是采用公钥加密法，客户端先向服务器索要公钥，然后用公钥加密信息，服务器收到后用私钥解密
++ SSL/TLS协议作用：认证用户和服务，加密数据，维护数据的完整性。
+
+---
+
+##### 6.==HTTPS是如何保证数据传输的安全，整体的流程是什么? (SSL是怎么工作保证安全的)==
+
+1. Client向Server端发起SSL连接请求;
+2. Server把公钥发送给Client，自己保存着唯一的私钥
+3. Client用公钥 **将双方通信的对称秘钥进行加密** ，并发送给Server
+4. Server利用私钥进行解密， 得到对称密钥
+5. 进行数据传输使用对称密钥进行传输，加解密速度更快
+
+---
+
+##### 7.==**为什么有的时候刷新页面不需要重新建立** **SSL** **连接?**==
+
++ TCP 进行长链接，不需要重新建立，SSL 自然也会用之前的。
+
+---
+
+#### 计算机网络安全
+
+#####  1. 介绍一下数字签名、摘要
+
++ 对一份数据进行单向的 Hash 操作，生成一个固定长度的 Hash 值，这个值就是这份数据的摘要，也称为指纹
+
+  > 摘要算法：MD5，论数据有多大，输出总是128位的散列值。
+
++ 用「公钥」对数据加密，用「私钥」去解密，是「加密」； 用「私钥」对数据加密，用「公钥」去解密，是「签名」
+
+---
+
+##### 2.**SSL 中的认证中的证书是什么?了解过吗**
+
++ 数字证书认证机构(CA，Certificate Authority)是客户端与服务器双方都可信赖的第三方机构。
++ 服务器的运营人员向 CA 提出公开密钥的申请，CA 在判明提出申请者的身份之后，会对已申请的公开密钥做数字签名，然后分配这个已签名的公开密钥，并将该公开密钥放入公开密钥证书后绑定在一起。
++ 进行 HTTPS 通信时，服务器会把证书发送给客户端。客户端取得其中的公开密钥之后，先使用数字签名进行验证，如果验证通过，就可以开始通信了。
+
+##### 3. **如何保证公钥不被篡改?**
 
 + 将公钥放在数字证书中。只要证书是可信的，公钥就是可信的。
 + 公钥加密计算量太大，如何减少耗用的时间?
@@ -884,7 +1341,7 @@ g++ coredumpTest.cpp -g -o coredumpTest
 
 ---
 
-##### 39. **非对称密钥加密你了解吗?优缺点?**
+##### 4. **对称密钥加密你了解吗?优缺点?**
 
 + 对称密钥加密(Symmetric-Key Encryption)，加密和解密使用同一密钥。
   + 优点:运算速度快
@@ -892,7 +1349,7 @@ g++ coredumpTest.cpp -g -o coredumpTest
 
 ---
 
-##### 40. **非对称密钥加密你了解吗?优缺点?**
+##### 5. **非对称密钥加密你了解吗?优缺点?**
 
 + 非对称密钥加密，又称公开密钥加密(Public-Key Encryption)，加密和解密使用不同的密钥。
 + 公钥所有人都可以获得，发送方获得接收方的公钥之后，使用公钥进行加密**， **接收方接收后使用私钥解密。
@@ -902,7 +1359,7 @@ g++ coredumpTest.cpp -g -o coredumpTest
 
 ---
 
-##### 41. **HTTPS 采用的加密方式有哪些?是对称还是非对称?**
+##### 6. **HTTPS 采用的加密方式有哪些?是对称还是非对称?**
 
 + HTTPS 采用混合的加密机制
   + 使用非对称密钥加密用于传输对称密钥来保证传输过程的安全性，之后使用对称密钥加密进行通信来保证通信过程的效率。
@@ -915,7 +1372,216 @@ g++ coredumpTest.cpp -g -o coredumpTest
 
 ---
 
+#### 解决HTTP无状态问题
 
+##### ==1.为什么提出Cookie==
+
++  因为HTTP协议是无状态的协议，比如在打开一个网页 A 后，再打开一个网页 B ，这个时候网页 B 不知道是谁打开的，这就是无状态。静态网页可以这么干，但是动态肯定是不行。
+
++ 所以服务端需要记录用户的状态，通过某种机制来识具体的用户，所以提出了Cookie和Session.
+
+  >  典型的场景比如购物车，当你点击下单按钮时，由于HTTP协议无状态，所以并不知道是哪个用户操作的，所以服务端要为特定的用户创建了特定的Session，用用于标识这个用户，并且跟踪用户，这样才知道购物车里面有几本书。
+
+---
+
+##### ==2.简单介绍一下Cookie是什么==
+
++ Cookie是服务器响应给客户端并且**存储在客户端**的一份小数据。**下次客户端访问服务器时，会自动带上这个Cookie。**服务器通过Cookie就可以区分客户端。进行会话管理。
+
+---
+
+##### ==3.服务器端如何将Cookie发给浏览器呢？==
+
++ 服务器端以HTTP响应形式发送发给客户端的Cookie，也就是Set-Cookie响应头部字段。
+
+---
+
+##### ==4.浏览器端再次访问服务器时，服务器是如何知道浏览器的Cookie呢？==
+
++ 浏览器接收到这些响应头后，会把它们作为Cookie文件存在客户端。当第二次请求**同一个**服务器，浏览器在发送的HTTP请求中带上这些Cookie。具体是以键值对的方式写在Cookie请求头中
+
+---
+
+##### ==5.Cookie有哪几种形式？==
+
+- 会话Cookie (Session Cookie)
+  - 服务器默认响应会话Cookie， **会话Cookie被保存在浏览器的内存中** ，当浏览器关闭时，内存被释放，内存中的Cookie自然也就烟消云散。
+- 持久性Cookie (Persistent Cookie)
+  - 下次还要重新登录，所以很麻烦，可以通过设置Cookie的持久化时间(MaxAge) > 0 ，让服务器响应持久性Cookie，会存在浏览器自定义的硬盘特定文件夹下
+
+---
+
+##### 6.有了Session为何还定义Cookie
+
++ Cookie是存在客户端的，如果保存了敏感信息，会被其他用户看到。
++ 如果信息太多，可能影响传输效率。
+
+---
+
+##### 7.介绍一下Session
+
++ 相比较Cookie存在客户端，Session存在服务端，更安全。其本质上类似于一个大Map，数据可以保存在集群、数据库、文件中；内容以键值对的形式存储，效率更高。不过
+
+---
+
+##### ==8.详细的介绍一下使用 Session 维护用户登录状态的过程==
+
+1. 用户进行登录时，提交包含用户名，密码的表单，放入 HTTP 请求报文中；
+2. 服务器验证用户名和密码，如果正确则把用户信息存储到 Redis 中，它在 Redis 中的 Key 称为 Session ID；
+3. 服务器在响应报文的 Set-Cookie 首部字段包含这个 Session ID，客户端收到响应报文后将该 Cookie 值存入浏览器中
+4. 客户端之后对同一个服务器进行请求时会包含该 Session ID，服务器收到后通过 Session ID 从 Redis 中取出用户信息，继续之前的业务操作。
+
+所以还是通过 Cookie 来实现Session跟踪的
+
+---
+
+##### 9.如果客户端的浏览器禁用了 Cookie 怎么办？
+
++ 可以 **URL重写的技术** 来进行会话跟踪，在URL后面附加上一个诸如 sid=xxxxx 的参数，服务端据此来识别用户。
+
+---
+
+##### 10.Session中的安全问题
+
++ 如果cookie里的sessionid被其他人发现了，会被冒充。比如连了不安全的 Wi-Fi ，Cookie 可能会被窃取，然后模拟用户操作。
++ 使用HTTPS进行通信。
+
+---
+
+##### 11.Session的序列化操作
+
++ 当服务器不得不重启时，为了不让当前保存在服务器的Session丢失，服务器会将当前内存中的Session序列化到磁盘中，等重启完毕，又重新读取回内存。
+
+---
+
+##### 12.Session的钝化与活化
+
++ 如果一个Session长时间无人访问，为了减少内存占用，会被钝化到磁盘上。
+
++ 当该Session再次被访问时，才会被反序列化。这就是Session的钝化和活化。
+
+> 也就是说，Session序列化不仅仅是服务器关闭时才发生，当一个Session长时间不活动，也有可能被序列化到磁盘.
+
+---
+
+##### 13.==**Cookie与Session 的区别与对比**==
+
++ Session是在服务端保存的一个数据结构，用来跟踪用户的状态，这个数据可以保存在集群、数据库、文件中；
++ Cookie是客户端保存用户信息的一种机制，用来记录用户的一些信息，Cookie本身也是实现Session的一种方式。
+
+---
+
+#### Linux的一些操作流程介绍
+
+##### 1. **在浏览器中输入url地址后显示主页的过程?**
+
+1. 根据域名，进行DNS域名解析; 
+2. 拿到解析的IP地址，建立TCP连接; 
+3. 向IP地址，发送HTTP请求; 
+4. 服务器处理请求;
+5. 返回响应结果; 
+6. 关闭TCP连接; 
+7. 浏览器解析HTML; 
+8. 浏览器布局渲染;
+
+---
+
+##### 2. **发送HTTP请求报文的流程是什么？**
+
+1. 客户端与服务器建立**TCP**连接(三次握手)
+2. 客户机发送**HTTP**请求报文:
+   + 应用层:客户端发送HTTP请求报文
+   + 传输层:切分⻓数据，并确保可靠性。
+   + 网络层:进行路由
+   + 数据链路层:传输数据
+   + 物理层:物理传输bit 
+3. 经过物理层→数据链路层→网络层→传输层→应用层到达服务器端，服务器解析请求报文，发送HTTP响应报文。 
+4. 客户端收到后解析HTTP响应报文
+
+#####  3.**Linux系统是如何收发网络包的？**
+
++ 发送流程：
+  + 首先，会先进入到网络接口层，在这一层会检查报文的合法性，如果不合法则丢弃，合法则会找出该网络包的上层 协议的类型， 比如是 IPv4，还是 IPv6，接着再去掉帧头和帧尾，然后交给网络层。
+  + 到了网络层，则取出 IP 包，判断网络包下一步的走向，比如是交给上层处理还是转发出去。当确认这个网络包要发送给本机 后，就会从 IP 头里看看上一层协议的类型是 TCP 还是 UDP，接着去掉 IP 头，然后交给传输层。
+  + 传输层取出 TCP 头或 UDP 头，根据四元组「源 IP、源端口、目的 IP、目的端口」 作为标识，找出对应的 Socket，并把数据拷 ⻉到 Socket 的接收缓冲区。
+  + 最后，应用层程序调用 Socket 接口，从内核的 Socket 接收缓冲区读取新到来的数据到应用层。 至此，一个网络包的接收过程 就已经结束了，你也可以从下图左边部分看到网络包接收的流程，右边部分刚好反过来，它是网络包发送的流程。
++ 接收流程：
+  + 首先，应用程序会调用 Socket 发送数据包的接口，由于这个是系统调用，所以会从用户态陷入到内核态中的 Socket 层，Socket 层会将应用层数据拷⻉到 Socket 发送缓冲区中。
+  + 接下来，网络协议栈从 Socket 发送缓冲区中取出数据包，并按照 TCP/IP 协议栈从上到下逐层处理。 如果使用的是 TCP 传输协 议发送数据，那么会在传输层增加 TCP 包头，然后交给网络层，网络层会给数据包增加 IP 包，然后通过查询路由表确认下一跳的 IP，并按照 MTU 大小进行分片。 分片后的网络包，就会被送到网络接口层，在这里会 通过 ARP 协议获得下一跳的 MAC 地址，然后增加帧头和帧尾，放到发包队列中。
+  + 这一些准备好后，会触发软中断告诉网卡驱动程序，这里有新的网络包需要发送，最后驱动程序通过 DMA，从发 包队列中读取 网络包，将其放入到硬件网卡的队列中，随后物理网卡再将它发送出去。
+
+---
+
+#### 应用层可能受到的攻击
+
+##### 1 .**知道SQL注入攻击吗?**
+
++ 攻击者在HTTP请求中注入恶意的SQL代码，服务器使用参数构建数据库SQL命令时，恶意SQL被一起构造，并在数据库中执行。
++ 如用户登录，输入用户名 lianggzone，密码 ‘ or ‘1’=’1 ，如果此时使用参数构造的方式，就会出现
+  `select * from user where name = ‘lianggzone’ and password = ‘’ or ‘1’=‘1’ `。不管用户名和密码是什么，使查询出来的用户列表不为空。
++ 如何防范SQL注入攻击使用预编译的PrepareStatement是必须的，但是一般从两个方面同时入手：
+  + Web端
+    + 有效性检验。
+    + 限制字符串输入的长度。
+  + 服务端
+    + 不用拼接SQL字符串。
+    + 使用预编译的PrepareStatement。 
+    + 有效性检验。(为什么服务端还要做有效性检验?第一准则，外部都是不可信的，防止攻击者绕过 Web端请求)
+    + 过滤SQL需要的参数中的特殊字符。比如单引号、双引号。
+
+---
+
+#####  2. **DDos** **攻击了解吗?**
+
++ 拒绝服务 (DoS) 攻击是一种恶意尝试，它在短时间内发起大量请求，耗尽服务器的资源，无法响应正常的访问，造成网站实质下线。
+
++ DDOS 里面的 DOS 是 denial of service（停止服务）的缩写，表示这种攻击的目的，就是使得服务中断。最前面的那个 D 是 distributed （分布式），表示攻击不是来自一个地方，而是来自四面八方，因此更难防。
+
++ DDos 预防:
+
+  + 限制SYN/ICMP流量：路由器上配置SYN/ICMP的最大流量来限制SYN/ICMP封包所能占有的最高频宽，出现大量的超过所限定的SYN/ICMP流量时，说明不是正常的网络访问
+
+  + 网站请求IP过滤 ：通过限制单位时间内的POST请求、404页面等访问操作，来过滤掉次数过多的异常行为。
+  + 关闭不必要的服务/端口
+
+---
+
+##### 3. **XSS** **攻击是什么?(低频)**
+
++ XSS跨站脚本攻击：攻击者想尽一切方法将一段脚本内容放到目标网站的目标浏览器上解释执行
+
++ 如何防范XSS攻击
+
+  + 前端，服务端，同时需要字符串输入的长度限制。 
+
+  + 前端，服务端，同时需要对HTML转义处理。将其中的”<”,”>”等特殊字符进行转义编码。
+
+    >  防 XSS 的核心是必须对输入的数据做过滤处理。
+
+---
+
+##### 4. **CSRF** **攻击?你知道吗?**
+
++ 跨站点请求伪造，指攻击者通过跨站请求，以合法的用户的身份进行非法操作。
++ 可以这么理解：攻击者盗用你的身份以第三方网站发送恶意请求。CRSF能做的事情包括利用你的身份发邮件，发短信，进行交易转账，甚至盗取账号信息。
+
++ 如何防范？
+  +  **验证请求来源地址；** 在HTTP Header中有一个字段Referer，它记录了HTTP请求的来源地址。如果Referer是其他网站，就有可能是CSRF攻击，则拒绝该请求。但是，服务器并非都能取到Referer。很多用户出于隐私保护的考虑，限制了Referer的发送。
+  +  **关键操作添加验证码；** 通常情况下，验证码能够很好的遏制CSRF攻击，但是很多情况下，出于用户体验考虑，验证 码只能作为一种辅助手段，而不是最主要的解决方案。
+  +  **在请求地址添加 token 并验证。** 在HTTP请求中进行token验证，如果请求中没有token或者token内容不正确，则认为CSRF攻 击而拒绝该请求。
+
+---
+
+##### 5. **文件上传漏洞是如何发生的?你有经历过吗? 如何预防**
+
++ 文件上传漏洞，指的是用户上传一个可执行的脚本文件，并通过此脚本文件获得了执行服务端命令的能力。
++ 许多第三方框架、服务，都曾经被爆出文件上传漏洞，比如很早之前的Struts2，以及富文本编辑器等 等，可被攻击者上传恶意代码，有可能服务端就被人黑了。
++ 预防：
+  + 判断文件类型。在判断文件类型的时候，可以结合使用MIME Type，后缀检查等方式。因为对于上传文件，不能简单地通过后缀名称来判断文件的类型，因为攻击者可以将可执行文件的后缀名称改为图片或其他后缀类型，诱导用户执行。
+  + 对上传的文件类型进行白名单校验，只允许上传可靠类型。
+  + 上传的文件需要进行重新命名，使攻击者无法猜想上传文件的访问路径，将极大地增加攻击成本， 同时向shell.php.rar.ara这种文件，因为重命名而无法成功实施攻击。
+  + 限制上传文件的大小。
+  + 单独设置文件服务器的域名。
 
 
 
