--- a/秋招经历/面经2️⃣.md
+++ b/秋招经历/面经2️⃣.md
@@ -112,6 +112,8 @@
 
 ##### 10.什么是移动构造函数
 
++ 代码构造和拷贝构造函数类似，但是内存的处理不是拷贝而是转移。注意参数类型是右值引用。
+
 - 移动构造函数的参数，移动构造函数的初值是一个右值引用 &&。往往是利用浅拷贝进行实现。
   - 拷贝构造函数的参数是左值引用，函数体往往是利用深拷贝进行实现。
 - 用一个右值，或者将亡值初始化另一个对象的时候，才会调用移动构造函数。可以使用move语句，将左值变成一个将亡值，这样传入就会告诉编译器调用移动构造函数。
@@ -125,10 +127,6 @@
 + `lambda实际是匿名类`：定义lambda时，编译器生成一个与其对应的未命名的类类型
 
 ##### 12.介绍一下 bind 使用
-
-
-
-
 
 
 
