--- a/秋招经历/面经1️⃣.md
+++ b/秋招经历/面经1️⃣.md
@@ -1756,6 +1756,532 @@ int main(){
 
 ### 2.传输层
 
+#### 传输层基本知识
+
+##### 1. **传输层的工作内容是什么？**
+
++ 从通信和信息处理的角度看，运输层向上面的应用层提供通信服务，属于面向通信部分的最高层，也是用户功能部分的最底层。(只有网络边缘部分的主机协议栈才有运输层)
+
+---
+
+##### 2. **网络层与传输层的区别？**
+
++ 网络层是为主机之间提供逻辑通信
++ 传输层为应用进程之间提供端到端的逻辑通信
+
+---
+
+##### 3. **运输层有什么重要功能？**
+
++ 主机中实现多个应用进程分别与另一台主机中的多个应用进程通信，拥有复用与分用的能力
+  + 复用： 发送方不同应用进程都能使用同一个运输层协议传输数据（加上适当的首部）
+  + 分用： 接收方的运输层在剥去报文的首部后，能把数据正确的交付给对应的目的进程
+
+---
+
+##### 4. **在运输层中端口有什么作用？**
+
++ 从运输层的角度看，通信的对象是进程，而端口就代表了进程。
+  + 端口用一个16位端口号进行标记
+  + 只需有本地意义，只标记了本计算机应用层的各个进程
+
+---
+
+##### 5. **一台机器能够使用的端口号上限是多少，是否可以修改?如果想要用的端口超过这个限制怎么办? **
+
++ 65536个。 TCP的报文头部源端口号和目的端口号的长度是16位，表示 $2^{16}=65536$ 个不同端口号。但0到1023是知名服务端口，所以实际上会少1024个端口号。
++ 而对于服务器来说，端口数目与65536无关，受限Linux可以打开的文件数量，并且通过MaxUserPort 进行配置。
++ 默认能打开的文件描述符最大为65535
+
+---
+
+#### TCP与UDP报文知识
+
+##### 6. **封包和拆包你听说过吗?它是基于TCP还是UDP的?**
+
++  封包和拆包都是基于TCP的。因为 **TCP是无边界的流传输，所以需要对TCP进行封包和拆包，确保发送和接收的数据不粘连** 。
+   + 封包：发送方在发送时为每个TCP数据报加上一个报头，将数据报分为报头和报体两个部分。
+   + 拆包：接收方在接收到报文后提取包头中的长度信息进行截取。
+
+---
+
+##### 7.**是什么是TCP 粘包/拆包 ？ 发生的原因？**
+
++ 发送方和接收方都有可能出现粘包问题。
+  + 发送端：由 **Nagle算法** 造成。 当要提交一段数据给 TCP 发送时， TCP 并不立刻发送此段数据，而是等待一小段时间，看看在等待期间是否还有要发送的数据，若有则会一次把多段数据发送出去。
+  +  接收端：接收不及时造成的接收端粘包 。 TCP 会把接收到的数据存在自己的缓冲区中然后通知应用层取数据。 当应用层由于某些原因不能及时取出 TCP 的数据，就会造成 TCP 缓冲区中存放了多段数据 。
++ 解决方法：
+  + 在所发送的内容前加上发送内容的长度，对方就会先收 4 Byte，解析获得接下来需要接收的长度，再进行收包。
+
+---
+
+##### 8. **用户数据报协议UDP(User Datagram Protocol) 有什么特点？**
+
+1. UDP是面向报文的，不合并也不拆分，加上首部之后直接发送
+
+   > + 报文太长，交给IP层之后，IP层可能会分片，降低IP层效率
+   > + 报文太短，交给IP层之后，显得IP数据报首部相对长度太长，也降低IP层效率
+
+2. 无连接的：发送消息之前不需要建立连接，减少了开销与发送数据之前的延迟
+
+3. 尽最大努力交付：不保证可靠交付，因此主机之间不需要维持复杂的连接状态表
+
+4. 没有拥塞控制：因此网络拥塞时不会使源主机的发送速率降低，符合多媒体通信要求
+
+5. 支持一对一，一对多，多对一，多对多的交互通信
+
+6. 首部开销小，只有8字节，比TCP的20字节小
+
+---
+
+##### 9. **介绍一下UDP的首部格式**
+
++ UDP有两个字段：  首部字段 和 数据字段。首部字段有8个字节，由4个字段组成，每个字段占两个字节：
+  + 源端口： 源端口号。需要给对方回信时使用，不用时赋予0
+  + 目的端口： 目的端口号。 在终点交付报文时必须使用
+  + 长度：UDP数据报的长度，最小值为8
+  + 检验和：检验UDP 数据报在传输过程中是否出错，出错则丢弃
+
+---
+
+##### 10. **在进行UDP编程的时候，一次发送多少bytes好?**
+
++ IP数据报大于1500字节(MTU)时需要分片。建议将UDP的数据控制在1472字节以下(1500-ip头20-UDP头8).
++ 进行Internet编程时则不同，因为Internet上的路由器可能会将MTU设为不同的值. 如果我们假定MTU为1500来发送数据的,而途经的某个网络的MTU值小于1500字节,那么系统将会使用一 系列的机制来调整MTU值,使数据报能够顺利到达目的地,这样就会做许多不必要的操作.
++ 鉴于Internet上的标准MTU值为576字节。建议在进行Internet的UDP编程时. 最好将UDP的数据长度控件在548字节(576-8-20)以内
+
+---
+
+##### 11. **为什么需要TCP协议？**
+
++ IP层是不可靠，不保证网络包的按需交付与数据完整性。
++ 如果需要保证传输过程可靠，则需要上层的TCP协议来负责，TCP能保证接收端收到的网络包是按序，无损坏的
+
+---
+
+##### 12. **介绍一下 传输控制协议TCP(Transmission Control Protocol)，它有什么特点？**
+
++ TCP是面向连接的运输层协议，提供 **可靠交付** 的 **基于字节流** 的传输层通信协议
+
+  + 面向连接： TCP连接只支持点对点的，只有两个端点
+
+  + 可靠的：传输过程中无论网络链路怎么变化，TCP能保证报文能达到接收端
+
+  + 面向字节流： 虽然应用程序与TCP以数据块的形式交互，但TCP把上层交付下来的数据仅看成是一连串无结构的字节流
+
+    > TCP 不保证接收方应用程序数据块与发出的数据块大小对应，但字节流必须完全一样。
+
++ 传输过程的特点：
+
+  + TCP 根据对方给出的窗口值和当前网络拥塞的程度来决定一个报文段应包含多少个字节（UDP 发送的报文⻓ 度是应用进程给出的）
+  + TCP 可把太⻓的数据块划分短一些再传送
+  + TCP 也可等待积累有足够多的字节后再构成报文段发送出去
+
+---
+
+##### 13. **TCP报文段首部有哪些字段？**
+
+##### ==14.TCP 头部有哪些信息？具体什么作用？==
+
++ 从前往后分别是
+  + 源端口号 (2 bytes)；目的端口号 (2 bytes)
+  + 序号  (4 bytes)：TCP 连接中传送的数据流的序号。序号字段的值是报文段所发送数据的第一个字节的序号。
+  + 确认号  (4 bytes)：期望收到对方下一个报文数据中第一个字节的序号。
+  + 数据偏移 (4 bits)：TCP 报文段的数据起始处距离 TCP 报文段的起始处有多远
+  +  保留 (6 bits)：保留为今后使用，但目前应置为 0。
+  + 紧急URG (1 bits)：当 URG=1 表明 **紧急指针** 有效，此报文段中有紧急数据，应尽快传送(相当于高优先级的数据)
+  + 确认ACK (1 bits)：ACK=1 时确认号字段才有效。当 ACK =0 时，确认号无效。
+  + 推送PSH (1 bits)： PSH=1 表示应尽快地交付接收应用进程，而不再等到整个缓存都填满了后再向上交付。
+  + 复位RST (1 bits)： RST=1 表明 TCP 连接中出现严重差错，必须释放连接，然后再重新建立运输连接。
+  + 同步SYN (1 bits)：SYN=1 表示这是一个连接请求或连接接受报文。
+  + 终止FIN (1 bits)：用来释放一个连接。FIN=1 表明此报文段的发送端的数据已发送完毕，并要求释放运输连接。
+  + 窗口 (2 bytes)：用来让对方设置发送窗口的依据，单位为字节。
+  + 检验和  (2 bytes)：检验和字段检验的范围包括首部和数据这两部分
+  + 紧急指针 (2 bytes)：指出在本报文段中紧急数据共有多少个字节（紧急数据放在本报文段数据的最前面）
+  + 选项字段 ：长度可变
+  + 填充(首部是4字节的整数倍)： 使整个首部长度是 4 字节的整数倍
+
+#### TCP链接知识
+
+##### 15. **常见TCP的连接状态有哪些?**
+
+---
+
+##### 16. **介绍一下TCP的连接的端点与协商内容**
+
++ TCP面向的是套接字，连接端点称为socket或者插口
+
+  <div align  = center>socket = ip地址 + 端口号 </div>
+
++ 建立TCP连接时需要通信两端达成三个信息的共识
+
+  + socket：即IP地址与端口号
+  + 序列号：用来解决乱序问题
+  + 窗口大小：用作流量控制
+
+---
+
+##### 17. **如何确定一个TCP连接**
+
++ 源地址，源端口，目的地址，目的端口，这四元组能确定一个连接
+  + 源地址，目的地址 在IP头部，通过IP协议将报文发送到具体主机
+  + 源端口，目的端口 在TCP头部，通过TCP协议将报文发送到具体进程
+
+---
+
+##### 18. **有一个 IP 的服务器监听了一个端口，它的 TCP 的最大连接数是多少？**
+
++ 最大TCP连接数 = 客户端 IP 数 * 客户端的端口数
+
++ 对 IPv4， IP 数最多为 $2^{32}$ ，端口数最多为$2^{16}$，则最大 TCP连接数为 $2^{48}$。但远不能到达这个上限值。
+
+  > + 文件描述符限制，Socket 都是文件，要通过 ulimit 配置文件描述符的数目;
+  > + 内存限制
+
+---
+
+#####  ==19.**讲讲TCP KeepAlive(保活机制,即心跳包)**==
+
++ TCP连接双方在连接空闲状态时，如果一方发生意外，另一方无法得知TCP连接已经失效，会一直维护这个连接。长时间的积累会导致非常多的半打开连接，造成端系统资源的消耗和浪费，
++ 所以 TCP 连接建立后，启用 TCP Keepalive 的一端便会启动一个计时器，当tcp_keep-alive_time时间到达 0 之后便会被发出纯 ACK 包去进行探测。根据对方的回应做出后序操作。
+
+---
+
+##### 20. **什么是半连接队列？**
+
++ 服务器第一次收到客户端的 SYN 之后处于 SYN_RCVD 状态，此时双方还没有完全建立其连接，服务器会把此种状态下请求连接放在一个 **队列** 里，这就是 **半连接队列** 。
++ 对应自然有 **全连接队列**，就是已经完成三次握手，建立起连接的就会放在全连接队列中。如果队列满了就有可能会出现丢包现象。
+
+---
+
+##### ==21. **TCP与UDP有哪些区别？**==
+
+1. 连接：
+   +  TCP面向连接传输协议，传输数据之前需建立连接，UDP无连接，即可传输
+2. 服务对象
+   + TCP点对点
+   + UDP都行
+3. 传输方式
+   + TCP 面向连接，基于字节流，无边界，但保证有序与可靠
+   + UDP直接发送包，有边界，但可能出现丢包与乱序
+4. 可靠性
+   + TCP是可靠交付数据，有序，不丢失，无损伤
+   + UDP尽最大努力传输，不保证可靠性
+5. 拥塞控制，流量控制
+   + TCP有拥塞控制与流量控制机制，保证数据传输的安全性
+   + UDP没有，就算网络拥堵也不影响发送速率
+6. 首部开销
+   + TCP首部较长，没有使用选项字段时为20字节，开销较大
+   + UDP首部只有8字节，固定不变，开销较小
+7. 分片方法
+   + TCP是在传输层进行分片，当数据大于MSS，TCP会进行分片，若中途丢失一个分片，只需重发对应分片即可
+   + UDP是在网络层进行分片，当数据大于MTU，IP会进行分片，若中途丢失一个分片，在实现可靠传输的 UDP 时需重传整个的数据包，所以通常UDP报文应该小于MTU
+8. 应用场景
+   + TCP是可靠交付，用于
+     + FTP文件传输
+     + HTTP/HTTPS
+   + UDP 无连接，可随时发送，处理简单高效
+     + 包总量较小的通信，如DNS，SNMP
+     + 视频，音频等多媒体通信
+     + 广播通信
+
+---
+
+##### 22. **为什么UDP头部没有 首部长度 字段，而TCP有？**
+
++ TCP有可变长的 选项 字段，所以需要记录长度
++ UDP首部大小固定，无需记录
+
+---
+
+##### 23. **为什么 UDP 头部有「包⻓度」字段，而 TCP 头部则没有「包⻓度」字段呢?**
+
++ TCP 是计算负载数据⻓度:  TCP数据的⻓度 =  IP总⻓度 - IP首部⻓度 - IP首部⻓度
++ UDP其实也可以这么计算，但可能是为了网络设备硬件设计和处理方便，首部⻓度需 **4** 字节整数倍。利用字段可能可能是为了补全。
+
+---
+
+##### 24. **TCP连接建立过程中要解决哪些问题？**
+
+- 要使每一方都能够确知对方的存在。
+- 要允许双方协商一些参数(如最大窗口值，是否使用窗口扩大选项和时间戳选项以及服务质量等)。
+- 能够对运输实体资源(如缓存大小，连接表中的项目等)进行分配。
+
+---
+
+##### 25.  **TCP链接建立过程**
+
++ 首先服务器端进程创建运输控制块TCB，处于 LISTEN(监听) 状态，等待客户端的链接到来
++ 客户端进程创建运输控制块TCB，想要建立TCB连接时， 向服务器端发送 TCB请求报文， 报文首部中的 同部位SYN=1，同时初始化序列号 seq=x， SYN报文中不能携带数据，但需要消耗一个序号。此时客户端处于 SYN-SENT(同步已发送)状态。
++ 服务器端接收到请求报文后，如果同意建立TCB连接，想客户端发送ACK确认报文报文首部中的 同部位SYN=1，ACK=1，同时初始化序列号 seq=y，确认序列 ack=x+1，此时报文中也不能携带数据，需要消耗一个序列号，此时服务器端处于 SYN-RECV(同步收到) 状态。
++ 客户端收到服务器端的确认后，需要向服务器端发送确认报文，报文中 ACK=1，SYN序列 seq=x+1，确认序列 ack=y+1。此时的确认报文可以携带数据，如果不需要携带，则不消耗序列号。此时客户端进入 ESTABLISHED 状态
++ 服务器端接收到确认报文后，也进入ESTABLISHED状态，TCP连接建立完成。
+
+---
+
+##### 26. **TCP建立连接中维护「序列号」的作用？**
+
++ 接收方可以去除重复的数据; 
++ 接收方可以根据数据包的序列号按序接收; 
++ 可以标识发送出去的数据包中， 哪些是已经被对方收到的
+
+---
+
+##### 27. **TCP建立连接为什么是三次握手，而不是两次或四次？**
+
++ TCP 建立连接时，通过三次握手能防止历史连接的建立，能减少双方不必要的资源开销，能帮助双方同步初始化序列号。序列号能够保证数据包不重复、不丢弃和按序传输。
++ 不使用「两次握手」和「四次握手」的原因:
+  + 「两次握手」:无法防止历史连接的建立，会造成双方资源的浪费，也无法可靠的同步双方序列号; 
+  + 「四次握手」:三次握手就已经理论上最少可靠连接建立，所以不需要使用更多的通信次数。
+
+---
+
+##### 28. **为什么客户端和服务端的初始序列号 ISN 是不相同的**
+
++ 如果序列号相同，那么就无法分辨出该报文是不是历史报文，如果历史报文被新的连接接收了，则会产生数据错乱
++ 为了安全性，防止黑客伪造的相同序列号的 TCP 报文被对方接收。
+
+---
+
+##### 29. **初始序列号 ISN(Initial Sequence Number) 是如何随机产生的?**
+
++ ISN = M + F (localhost, localport, remotehost, remoteport)
+
+  > + M 是一个计时器，这个计时器每隔 4 毫秒加 1。
+  > + F 是一个 Hash 算法，根据源 IP、目的 IP、源端口、目的端口生成一个随机数值。要保证 Hash 算法不能被外部轻易推算得出，用 MD5 算法是一个比较好的选择。
+
+---
+
+##### 30. **既然 IP 层会分片，为什么 TCP 层还需要 MSS 呢?**
+
+> +  **MTU :** 一个网络包的最大⻓度，以太网中一般为 1500 字节;
+> +  **MSS :** 除去 IP 和 TCP 头部之后，一个网络包所能容纳的 TCP 数据的最大⻓度;
+
++ 将 TCP 的整个报文(头部 + 数据)交给 IP 层进行分片的话，如果一个 **IP** 分片丢失，整个 **IP** 报文的所有分片都得重传。  IP 层本身没有超时重传机制，由传输层的 TCP 来负责超时和重传。
++ 当接收方发现 TCP 报文(头部 + 数据)的某一片丢失后，则不会响应 ACK 给对方，那么发送方的 TCP 在超时后，就重会发「整个 TCP 报文(头部 + 数据)」。非常没有效率。
++ 为了达到最佳的传输效能， TCP 协议在建立连接的时候通常要协商双方的 **MSS** 值，当 TCP 层发现数据超过 MSS 时，则就先会进行分片，经过 TCP 层分片后，如果一个 TCP 分片丢失后，进行重发时也是以 **MSS** 为单位，而不用传所有 的分片，大大增加了重传的效率。
+
+---
+
+##### 31. **什么是SYN攻击？**
+
++ 攻击者短时间伪造不同 IP 地址的 SYN 请求报文，服务端每接收到一个 SYN 报文就进入 SYN_RCVD 状态，但服务端发送出去的 ACK + SYN 报文，无法得到未知 IP 主机的 ACK 应答，久而久之就会占满服务端的未连接队列，使得服务器不能为正常用户服务。
+
+---
+
+##### 32. **如何避免SYN攻击？**
+
++ 修改 Linux 内核参数，控制队列大小和队列满时相应的处理。
+  + 当网卡接收数据包的速度大于内核处理的速度时，会有一个队列保存这些数据包。超出处理能时，对新的 SYN 直接回报 RST 复位包、丢弃连接。
+
+---
+
+##### 33. **TCP链接释放的过程**
+
++ 客户端进程向服务器端发送释放连接的报文，其中 FIN=1，初始化序列号seq=u，并停止发送数据，主动关闭TCP连接，进入 **FIN-WAIT1终止等待1** 状态，等待服务器端的确认。
++ 服务器端收到客户端的释放连接报文后，发送确认报文，其中ACK=1，序列号seq=v，确认报文ack=u+1，服务器端进入 **CLOSE_WAIT关闭等待** 状态，此时TCP处于半关闭状态，客户端到服务器端的链接释放。
++ 客户端在接收到服务器端的确认报文后，进入 **FIN_WAIT2终止等待2** 状态，等待服务器端发送连接释放报文
++ 等到服务器端没有需要向客户端发送的数据时，发送连接释放报文，其中FIN=1，ACK=1，序列号seq=w，确认序列ack=u+1，服务器端进入 **LAST_ACK最后确认** 状态，等待客户端的确认
++ 客户端收到服务器端的释放连接报文后，发出确认报文，其中ACK=1，序列号seq=u+1，确认序列ack=w+1，客户端进入 **TIME_WAIT时间等待** 状态。经过时间 **2MSL** 后，客户端进入 **CLOSED** 状态。
++ 服务器端收到确认报文后，也进入 **CLOSED** 状态。
+
+---
+
+##### 34. **释放连接为什么需要四次挥手？**
+
++ 关闭连接时，客户端向服务端发送 FIN 时，仅仅表示客户端不再发送数据了但是还能接收数据。
++ 服务器收到客户端的 FIN 报文时，先回一个 ACK 应答报文，而服务端可能还有数据需要处理和发送，等服务端不再发送数据时，才发送 FIN 报文给客户端来表示同意现在关闭连接。
++ 从上面过程可知，服务端通常需要等待完成数据的发送和处理，所以服务端的 ACK 和 FIN 一般都会分开发送，从而比三次握手导致多了一次。
+
+---
+
+##### 35. **对于FIN_WAIT_2，CLOSE_WAIT状态和TIME_WAIT状态?你知道多少?**
+
++ FIN_WAIT_2:
+
+  + 半关闭状态。
+  + 发送断开请求一方还有接收数据能力，但已经没有发送数据能力。
+
++ CLOSE_WAIT状态:
+
+  + 被动关闭连接一方接收到FIN包会立即回应ACK包表示已接收到断开请求。
+
+  + 被动关闭连接一方如果还有剩余数据要发送就会进入CLOSED_WAIT状态。
+
++ TIME_WAIT状态:
+
+  + 又叫2MSL等待状态。 如果客户端直接进入CLOSED状态，如果服务端没有接收到最后一次ACK包会在超时之后重新再发FIN包，此时因为客户端已经CLOSED，所以服务端就不会收到ACK而是收到RST。
+  + 所以 TIME_WAIT状态目的是防止最后一次握手数据没有到达对方而触发重传FIN准备的。 在2MSL时间内，同一个socket不能再被使用，否则有可能会和旧连接数据混淆(如果新连接和旧 连接的socket相同的话)。
+
+---
+
+##### 36. **MSL 与 TTL 的区别是什么？**
+
++  MSL 是 Maximum Segment Lifetime，表示任何报文在网络上存在的最⻓时间，超过这个时间报文将被丢弃。
++  因为 TCP 报文基于是 IP 协议的，而 IP 头中有一个 TTL 字段，表示经过的最大路由数，每经过一个路由器就减 1，为 0 则被丢弃，同时发送 ICMP 报文通知源主机。
++  MSL 的单位是时间，而 TTL 是经过路由跳数。往往 **MSL** 应该要大于等于 **TTL** 消耗为 **0** 的 时间，以确保报文已被自然消亡。
+
+---
+
+##### 37. **为什么需要 TIME_WAIT 状态?**
+
++  消除旧连接的数据包，经过 2MSL 时间两个方向上的数据包都会在网络中自然消失，再出现的数据包一定都是新建立连接所产生的。
++  如果没有 TIME_WAIT状态，服务端如果没有接收到最后一次ACK包，会在超时之后重新再发FIN包，但此时客户端已经CLOSED，服务端就不会收到ACK而是收到RST。 服务端则会一直处在 LASE_ACK 状态。
+
+---
+
+##### 38. **为什么 TIME_WAIT 等待的时间是 2MSL?**
+
++  网络中可能存在来自发送方的数据包，当这些数据包被接收方处理后又会向对方发送响应，一来一回需要等待 **2** 倍的时间。
++  在 Linux 系统里 2MSL 默认是 60 秒，那么一个 MSL 也就是 30 秒。**Linux** 系统停留在 **TIME_WAIT** 的时间为固定的 **60** 秒。
+
+---
+
+##### 39. **可以解释一下 ** **RTO** **，** **RTT** **和超时重传分别是什么吗?**
+
++ 超时重传： 发送端发送报文后若长时间未收到确认则需要重发该报文。可能有以下几种情况:
+  + 发送的数据没能到达接收端，所以对方没有响应。 
+  + 接收端接收到数据，但是ACK报文在返回过程中丢失。 
+  + 接收端拒绝或丢弃数据。
++ RTO：从上一次发送数据，因为长期没有收到ACK响应，到下一次重发之间的时间。就是重传间隔。
+  + 通常每次重传RTO是前一次重传间隔的两倍，计量单位通常是RTT。例:1RTT，2RTT，4RTT， 8RTT......
+    重传次数到达上限之后停止重传。
++ RTT：数据从发送到接收到对方响应之间的时间间隔，即数据报在网络中一个往返用时。大小不稳定。
+
+---
+
+##### TIME_WAIT和CLOSE_WAIT的区别。
+
++ TIME_WAIT是主动关闭连接时形成的，等待2MSL时间，约4分钟，防止最后一个释放确认动作丢失。
++ CLASE_WAIT是被动关闭连接形成的。服务端收到客户端的释放连接请求并进行确认胡进入CLOSE_WAIT状态。如果服务器端不执行close，就不能由CLOSE_WAIT迁移到LAST_ACK.
+
+---
+
+##### 40. **TIME_WAIT 过多的原因，有什么危害以及解决方法?**
+
++ 原因：
+
+  +  短时间内出现过多的TCP链接释放
+
++ 危害：
+
+  +  客户端TIME_WAIT过多，就会导致端口资源被占用，被占满就会导致无法创建新的连接。
+  +  服务端只监听一个端口，但是会把连接扔给处理线程，理论上监听的端口可以继续监听。但是当服务端出现大量 TIME_WAIT 时，系统资源被占满时，会导致处理不过来新的连接。
+
++ 处理方法：
+
+  + 调整系统内核参数：
+
+    +   修改系统默认的 TIMEOUT 时间 tcp_fin_timeout
+    +   减少保持TIME_WAIT套接字的最大数量 tcp_max_tw_buckets
+    +   增加可用端口范围
+
+  + 调整短链接为长链接
+
+    + 短连接：连接->传输数据->关闭连接
+
+      > 短连接是指SOCKET连接后发送后接收完数据后马上断开连接。
+
+    + 长链接：连接->传输数据->保持连接 -> 传输数据-> ... ->关闭连接
+
+      > 长连接指建立SOCKET连接后不管是否使用都保持连接，但安全性较差。
+
+---
+
+##### 41. **服务器出现大量close_wait的连接的原因是什么?有什么解决方法?**
+
++ 原因:
+
+  + 服务器内部业务处理占用了过多时间，都没能处理完；或者还有数据需要发送；或者服务器的业务逻辑有问题，没有执行close()方法 
+  + 服务器的父进程派生出子进程，子进程继承了socket，收到FIN的时候子进程处理但父进程没有处理该信号，导致socket的引用不为0无法回收
+
++ 危害：socket资源会被耗尽
+
++ 处理方法: 
+
+  + 停止应用程序
+
+  + 修改程序里的bug
+
+---
+
+#### TCP可靠传输
+
+##### ==1. **TCP如何实现的可靠传输？**==
+
++ 首先，采用三次握手来建立TCP连接，四次握手来释放TCP连接，从而保证建立的传输信道是可靠的。
++ 其次，TCP采用连续ARQ协议来保证数据传输顺序的正确性，使用滑动窗口协议来保证接方能够及时处理所接收到的数据，进行流量控制。
++ 最后，TCP使用慢开始、拥塞避免、快重传和快恢复来进行拥塞控制，避免网络拥塞。
+
+---
+
+##### 2. **介绍一下停止等待协议**
+
++ **“**停止等待**”**就是每发送完一个分组就停止发送，等待对方的确认。在收到确认后再发送下一个分组。
++ 发送方如何知道对方正确收到消息的？
+  + 每一个已发送的分组都设置了一个超时计时器。 只要在超时计时器到期之前收到了相应的确认，就撤销该超时计时器，继续发送下一个分组 ，否则重发
++ 如何知道收到了重复的分组，需要丢弃呢？
+  + 每一个发送的分组都进行编号。接收方收到了编号相同的分组，则认为收到了重复分组，会进行丢弃，并回送确认
+  + 发送方也为发送的确认也进行编号，指示该确认是对哪一个分组的确认。
+  + 接收方根据确认其编号，可以确定它是对哪一个分组的确认，避免重发发送。若为重复的确认，则将其丢弃。
++ 改进：为了提高传输效率，发送方可以不使用低效率的停止等待协议，而是采用流水线传输。
+
+---
+
+##### 3. **介绍一下 连续ARQ协议**
+
++ 发送方设置
+  + 发送方设置发送窗口，将发送窗口中的分组连续发送出去，而不用逐个等待对方的确认，提高了信道利用率
+  + 发送方每接收到一个确认，就会把发送窗口向前滑动一个分组的位置
++ 接收方设置
+  + 不需要逐个发送确认，只需对按序到达的最后一个分组发送确认，表示到这个分组为止的所有分组都已正确收到。
++ 回退N机制：如果发送方发送了前 5 个分组，而中间的第 **3** 个分组丢失了。这时接收方只能对前两个分组发出确认。发送方无法知道后面三个分组的下落，而只好把后面的三个分组都再重传一次。 
++ 优点：容易实现，即使确认丢失也不必重传
++ 缺点：不能向发送方反映出接收方已经正确收到的所有分组的信息。
+
+---
+
+##### ==4. **介绍一下TCP的流量控制方法**==
+
++ TCP利用滑动窗口实现流量控制。窗口用来暂时存放字节流。发送方和接收方各有一个窗口。接收方通过 TCP 报文段中的窗口字段告诉发送方自己的窗口大小，发送方根据这个值和其它信息设置自己的窗口大小。
++ 发送方：发送窗口内的字节都允许被发送，窗口左部的字节已经发送并且收到了确认，就将窗口右滑动一定距离，直到左部第一个字节不是已发送并且已确认的状态。
++ 接收方：接收窗口内的字节都允许被接收，接收窗口左部字节已经发送确认并交付主机，就向右滑动接收窗口。接收窗口只会对窗口内最后一个按序到达的字节进行确认。
+
+---
+
+##### ==5. **介绍一下TCP的拥塞控制原理**==
+
++ 流量控制是为了让接收方能来得及接收，而拥塞控制是为了降低整个网络的拥塞程度。否则导致网络拥塞程度更高，重发分组数目也会更多
+
++ TCP 主要通过四个算法来进行拥塞控制: 慢开始、拥塞避免、快重传、快恢复。
+
++ 发送方需要维护一个叫做拥塞窗口(cwnd)的状态变量
+
+  >  拥塞窗口 与 发送方窗口 的区别：拥塞窗口只是一个状态变量，实际决定发送方能发送多少数据的是发送方窗口。
+
++ **慢开始与拥塞避免**
+
+  + 发送的最初执行慢开始，令 cwnd = 1，只能发送 1 个报文段；当收到确认后，将 cwnd 加倍
+  + 设置一个慢开始⻔限 ssthresh，当 cwnd >= ssthresh 时，进入拥塞避免，每个轮次只将 cwnd 加 1
+  + 如果出现了**==超时==**，则令 ssthresh = cwnd / 2，然后重新执行慢开始。
+
++  **快重传与快恢复**
+
+  + 在接收方，要求每次接收到报文段都应该对最后一个已收到的有序报文段进行确认。例如已接收到 M1，M2，此时收到 M4，应当发送对 M2 的确认。 
+  + 在发送方，如果收到三个重复确认，则知道下一个报文段丢失，应执行快重传，立即重传下一个报文段。例如收到三个 M2，则 M3 丢失，立即重传 M3。
+  + 在这种情况下，只是**==丢失==**个别报文段，而不是网络拥塞。因此执行快恢复，令 ssthresh = cwnd / 2 ，cwnd = ssthresh，注意到此时直接进入拥塞避免。
+
+> 区分好 两者的区别和使用场景。
+>
+> +  发生超时：说明对方的确认包发不过来，说明网络拥堵，则进行慢开始和拥塞避免
+> + 发生丢失：说明重复三次ACK，有丢失，则进行快重传和快恢复，避免拥塞。
+
+
+
+
+
+
+
 ### 3.应用层
 
 #### 基本介绍
