--- a/秋招经历/面经2️⃣.md
+++ b/秋招经历/面经2️⃣.md
@@ -101,14 +101,20 @@
 + 左值：可以出现在 = 左边的值
 + 右值：只能出现在 = 右边的值；如临时对象
 
+---
+
 ##### 8.什么是右值引用
 
 + `右值引用` 通过`&&`来 必须绑定 `右值` 的引用，
   + 右值引用只能绑定将要被销毁的对象，故可将右值引用的资源安全地移动到另一个对象
 
+---
+
 ##### 9.std::move 怎么使用？
 
 + `std::move`函数可将左值显式转换为它对应的右值引用类型。处理完后，除对它赋值或销毁外，不可再使用它的值。
+
+---
 
 ##### 10.什么是移动构造函数
 
@@ -129,6 +135,12 @@
 ##### 12.介绍一下 bind 使用
 
 
+
+
+
+
+
+---
 
 ## 三. STL
 
@@ -1049,7 +1061,7 @@ int poll(struct pollfd *fds, nfds_t nfds, int timeout);
 
 ---
 
-##### 自我介绍
+##### 1.自我介绍
 
 + 来自东南大学网络空间安全学院，专业是计算机专业，专硕。
 + 比较熟悉C/C++基本语法，对操作系统，计算机网络比较了解
@@ -1057,7 +1069,7 @@ int poll(struct pollfd *fds, nfds_t nfds, int timeout);
 
 ---
 
-##### **介绍一下你的WebServer项目**
+##### **2.介绍一下你的WebServer项目**
 
 + 自己改写了一个简单的Reactor高并发模型服务器。
 + 主线程初始化一个线程池，然后建立socket链接，进行绑定IP与端口，创建socketfd，利用IO复用技术Epoll模型，创建efd，将socketfd添加至efd中，进行监听事件与数据读写。
@@ -1069,7 +1081,7 @@ int poll(struct pollfd *fds, nfds_t nfds, int timeout);
 
 ---
 
-##### 解析消息的流程process
+##### 3.解析消息的流程process
 
 - 解析消息 process_read
   - 当解析遇到空行时，说明消息头部字段解析完成，接下来解析的就是消息体
@@ -1088,7 +1100,7 @@ int poll(struct pollfd *fds, nfds_t nfds, int timeout);
 
 ---
 
-##### **介绍一下服务器程序中的事件处理模式**
+##### 4.**介绍一下服务器程序中的事件处理模式**
 
 + 简单介绍：
   + Reactor模式：利用I/O复用，让主线程调用 epoll_wait 等待 socket 上有数据可读与可写。当epoll_wait 通知主线程后，主线程将 socket 事件放入请求队列，唤醒的线程来处理数据的读写与后续的业务逻辑
@@ -1126,7 +1138,7 @@ int poll(struct pollfd *fds, nfds_t nfds, int timeout);
 
 ---
 
-##### **线程池的优点是什么？**
+##### 5.**线程池的优点是什么？**
 
 + 线程池旨在降低创建和销毁线程的频率，使其维持合理数量的线程，并让空闲的线程重新承担新的任务 。
 + 连接池是指维持连接的缓存池，尽量重用已有的连接，降低创建和关闭连接的频率。
@@ -1134,7 +1146,23 @@ int poll(struct pollfd *fds, nfds_t nfds, int timeout);
 
 ---
 
-##### 如何设计一个多线程下安全的队列
+##### 6.C++11 多线程使用
+
+
+
+
+
+---
+
+##### 7.C++11 锁你知道哪些，有什么区别？
+
+
+
+
+
+---
+
+##### 8.如何设计一个多线程下安全的队列，实现生产者消费者问题
 
 ```c++
 struct Pool {
@@ -1147,7 +1175,7 @@ struct Pool {
 
 ---
 
-##### 你是怎么设计线程池的？
+##### 9.你是怎么设计线程池的？
 
 + 定义了一个ThreadPool类，其中的将一个Pool类与Pool类型的智能指针pool。其中Pool类有四个元素，分别为：
   + mutex锁 mtx
@@ -1180,13 +1208,13 @@ cond.notify_one();
 
 ---
 
-##### 为什么需要定时器
+##### 10.为什么需要定时器
 
 + 因为系统中的文件描述符资源有限，如果一直存在不活跃的文件描述符，会消耗文件资源
 
 ---
 
-##### 有什么方法来实现定时器？为什么利用最小根堆来设计定时器的？
+##### 11.有什么方法来实现定时器？为什么利用最小根堆来设计定时器的？
 
 + 时间轮：
 + 时间堆：定时器的触发是由于时间到了，因此只有时间最短的定时器会首先被触发，通过这个原理，可以采用最小堆，将按时间顺序排序，堆顶元素是时间最短的定时器，因此只要判断堆顶元素是否被触发即可。只有堆顶定时器的时间到了，才会到其他时间较晚的定时器的时间。
@@ -1211,7 +1239,7 @@ cond.notify_one();
 
 ---
 
-##### 如何设计的自动增长缓冲区
+##### 12.如何设计的自动增长缓冲区
 
 + 设计了一个buffer类，主要元素有：
   + `vector<char>` 封装的 buffer_
@@ -1222,7 +1250,7 @@ cond.notify_one();
 
 ---
 
-##### 如何利用正则表达式来解析HTTP响应的？
+##### 13.如何利用正则表达式来解析HTTP响应的？
 
 ```c++
 // ~ 匹配字符串： |任意非空 任意非空 HTTP/任意非空|   --> 三个group ()  ()  ()
@@ -1619,22 +1647,20 @@ for(int i = 1; i < subMatch.size(); ++ i) {
 
 ## 八.综合面试
 
-## 智力题 楼层丢鸡蛋
+楼层丢鸡蛋
 
-## 8个赛道，64匹马，要选前4，需要多少轮。
+8个赛道，64匹马，要选前4，需要多少轮。
 
-## 一个检测试剂10分钟检测一位病人，工厂有1000人，最少多少支试剂能10分钟内检测出来哪一位患病？讲出原理（小猪喝水问题的变种
+一个检测试剂10分钟检测一位病人，工厂有1000人，最少多少支试剂能10分钟内检测出来哪一位患病？讲出原理（小猪喝水问题的变种
 
-## 1-100，报号，每次剔除奇数位置的人，问这样剔除以后最后剩下的是几号？64
-
-## 自我介绍，将自己的经历和项目做一些介绍； 
+1-100，报号，每次剔除奇数位置的人，问这样剔除以后最后剩下的是几号？64
 
 自己所做邻域的国内外现状、学术界和工业界的状况（因为我研究生期间做的内容比较小众）； 
 
-## 应聘季自己应聘的优势和劣势； 
+应聘季自己应聘的优势和劣势； 
 
-## 对华为的文化怎么理解； 
+对华为的文化怎么理解； 
 
-## 自己最喜欢的学习方式； 
+自己最喜欢的学习方式； 
 
-## 将来的职业规划；
+将来的职业规划；
