--- a/秋招经历/面经1️⃣.md
+++ b/秋招经历/面经1️⃣.md
@@ -2210,7 +2210,7 @@ int main(){
 ##### ==1. **TCP如何实现的可靠传输？**==
 
 + 首先，采用三次握手来建立TCP连接，四次握手来释放TCP连接，从而保证建立的传输信道是可靠的。
-+ 其次，TCP采用连续ARQ协议来保证数据传输顺序的正确性，使用滑动窗口协议来保证接方能够及时处理所接收到的数据，进行流量控制。
++ 其次，TCP采用连续ARQ协议来保证数据传输顺序的正确性，使用滑动窗口协议来进行流量控制，保证接方能够及时处理所接收到的数据。
 + 最后，TCP使用慢开始、拥塞避免、快重传和快恢复来进行拥塞控制，避免网络拥塞。
 
 ---
@@ -2244,8 +2244,8 @@ int main(){
 ##### ==4. **介绍一下TCP的流量控制方法**==
 
 + TCP利用滑动窗口实现流量控制。窗口用来暂时存放字节流。发送方和接收方各有一个窗口。接收方通过 TCP 报文段中的窗口字段告诉发送方自己的窗口大小，发送方根据这个值和其它信息设置自己的窗口大小。
-+ 发送方：发送窗口内的字节都允许被发送，窗口左部的字节已经发送并且收到了确认，就将窗口右滑动一定距离，直到左部第一个字节不是已发送并且已确认的状态。
-+ 接收方：接收窗口内的字节都允许被接收，接收窗口左部字节已经发送确认并交付主机，就向右滑动接收窗口。接收窗口只会对窗口内最后一个按序到达的字节进行确认。
+  + 发送方：发送窗口内的字节都允许被发送，窗口左部的字节已经发送并且收到了确认，就将窗口右滑动一定距离，直到左部第一个字节不是已发送并且已确认的状态。
+  + 接收方：接收窗口内的字节都允许被接收，接收窗口左部字节已经发送确认并交付主机，就向右滑动接收窗口。接收窗口只会对窗口内最后一个按序到达的字节进行确认。
 
 ---
 
@@ -4151,22 +4151,32 @@ void consumer() {
 
 ##### 3.==原子操作是如何实现的？==
 
-+ 处理器使用基于对缓存加锁或总线加锁的方式来实现多处理器之间的原子操作。
-+ 首先处理器会自动保证基本的内存操作的原子性。保证从系统内存中读取或者写入一个字节是原子的。复杂的内存操作处理器不能自动保证其原子性的，比如跨总线宽度、跨多个缓存行和跨页表的访问。但是提供 **总线锁定** 和 **缓存锁定** 两个机制来保证复杂内存操作的原子性。
-  + 总线锁保证原子性
-    + 总线锁就是使用处理器提供的一个 LOCK# 信号，当一个处理器在总线上输出此信号时，其他处理器的请求将被阻塞住，那么该处理器可以独占共享内存。但开销比较大
-  + 缓存锁保证原子性
-    + 内存区域如果被缓存在处理器的缓存行中，并且在Lock操作期间被锁定，那么当它执行锁操作回写到内存时，处理器通过修改内部的内存地址，并允许它的缓存一致性机制来保证操作的原子性
++ 单个的机器指令可以看成是原子操作（如果有编译器优化、乱序执行等情况除外）；
++ 多核系统里是多指令流并行运行的，使用内存栅障来实现，一个CPU核在执行原子操作时，其他CPU核停止对内存操作或者不对指定的内存进行操作，从而避免数据竞争问题。
++ 实现方式：基于缓存加锁与总线加锁。
+  + 总线锁：使用处理器提供的一个 LOCK# 信号，当一个处理器在总线上输出此信号时，其他处理器的请求将被阻塞住，此时独占共享内存。但开销比较大
+  + 缓存锁：内存区域如果被缓存在处理器的缓存行中，并且在Lock操作期间被锁定，那么当它执行锁操作回写到内存时，处理器通过修改内部的内存地址，并允许它的缓存一致性机制来保证操作的原子性
     + 不能用缓存锁的情况：
       + 操作的数据不能被缓存在处理器内部，或操作的数据跨多个缓存行(cache line)时
-      + 有些处理器不支持缓存锁定。对于Intel 486和Pentium处理器
+
++ C++11提供了原子操作：`std::atomic<>` 模板类
 
 ---
 
 ##### 4.==什么是死锁？死锁产生的原因是什么==
 
-+  当两个线程为了保护两个不同的共享资源而使用了两个互斥锁，这两个互斥锁应用不当时，可能会造成两个线程都在等待对方释放锁，在没有外力的作用下，这些线程会一直相互等待，没办法继续运行，这种情况就是发生了死锁。
-+ 死锁只有同时满足以下四个条件才会发生:
++  指两个或多个进程在执行过程中，因争夺资源而造成的一种 **互相等待** 的现象，若无 **外力** 作用,它们都将无法推进下去
+
+> 编程中出现的情况：
+>
+> + 存在一对线程中的每一个线程都需要同时锁定两个互斥元mutex来执行一些操作，此时每个线程都拥有了一个，同时等待另一个。两个线程都无法执行，等待另一个释放其互斥元。
+
++ 出现死锁的原因：
+  1.  系统资源不足
+  2. 资源分配不当等
+  3. 运行推进顺序不合适
+
++  死锁只有同时满足四个条件才会发生:
   1. 互斥条件;
      + 进程对所需求的资源具有排他性，若有其他进程请求该资源，请求进程只能等待。
   2. 持有并等待条件;
@@ -4180,25 +4190,45 @@ void consumer() {
 
 ##### 5.==避免死锁的方式==
 
-死锁是由四个必要条件导致的，只要破坏这四个必要条件中的一个条件，死锁情况就应该不会发生。
+破坏这四个必要条件中的一个条件，死锁情况就应该不会发生。
 
 1. 打破互斥条件：需要允许进程同时访问某些资源
    + 这种方法受制于实际场景，不太容易实现条件；
-2. 打破不可抢占条件：需要允许进程强行从占有者那里夺取某些资源，或者占有资源的进程不能再申请占有其他资源，必须释放手上的资源之后才能发起申请
+2. 不可抢占条件：需要允许进程强行从占有者那里夺取某些资源，或者占有资源的进程不能再申请占有其他资源，必须释放手上的资源之后才能发起申请
    + 这个其实也很难找到适用场景；
-3. 进程在运行前申请得到所有的资源，否则该进程不能进入准备执行状态。
+3. 持有并等待条件：进程在运行前申请得到所有的资源，否则该进程不能进入准备执行状态。
    + 可能导致资源利用率和进程并发性降低；
-4. 避免出现资源申请环路，即对资源事先分类编号，按号分配。
+4. 环路等待条件：避免出现资源申请环路，即对资源事先分类编号，按号分配。
    + 这种方式可以有效提高资源的利用率和系统吞吐量，但是增加了系统开销，增大了进程对资源的占用时间。
 
 ---
 
-##### 6.讲出你知道的所有解决死锁的方法
+##### ==6.如果在死锁检查时发现了死锁情况，消除死锁的几种方式：==
+
+1. 最简单、最常用的方法就是进行系统的重新启动，不过这种方法代价很大，意味着在这之前所有的进程已经完成的计算工作都将付之东流
+
+2. 进程回退策略，让参与死锁的进程回退到没有发生死锁前某一点处，并由此点处继续执行，以求再次执行时不再发生死锁。
+
+   >  虽然这是个较理想的办法，但是操作起来系统开销极大，要有堆栈这样的机构记录进程的每一步变化，以便今后的回退，有时这是无法做到的
+
+3. 终止参与死锁的进程，收回它们占有的资源，从而解除死锁。这时又分两种情况：
+
+   + 一次性撤消参与死锁的全部进程，剥夺全部资源；
+
+   + 从代价最小，逐步撤消参与死锁的进程，逐步收回死锁进程占有的资源。
+
+     > 选择逐步撤消的进程时要按照一定的原则进行，目的是：
+     >
+     > + 比如按进程的优先级确定进程的代价；
+     > + 考虑进程运行时的代价和与此进程相关的外部作业的代价等因素；
+
+---
+
+##### ==7.讲出你知道的所有解决死锁的方法==
 
 1. 鸵鸟策略
    + 因为解决死锁问题的代价很高，因此鸵鸟策略这种不采取任务措施的方案会获得更高的性能。 
    + 当发生死锁时不会对用户造成多大影响，或发生死锁的概率很低，可以采用鸵鸟策略。 大多数操作系统，包括 Unix，Linux 和 Windows，处理死锁问题的办法仅仅是忽略它。
-2. 死锁检测
 3. 死锁恢复
    + 利用抢占恢复
    + 利用回滚恢复
@@ -4212,31 +4242,14 @@ void consumer() {
 
 ---
 
-##### 7.编程过程中如何避免死锁
+##### ==7.编程过程中如何避免死锁==
 
-1. 在代码中，存在同时获取至少2个锁A/B的场景，并且这样的代码出现超过1次。
-2. 智能指针的循环引用
-
----
-
-##### 8.如果在死锁检查时发现了死锁情况，消除死锁的几种方式：
-
-1. 最简单、最常用的方法就是进行系统的重新启动，不过这种方法代价很大，它意味着在这之前所有的进程已经完成的计算工作都将付之东流，包括参与死锁的那些进程，以及未参与死锁的进程；
-
-2. 撤消进程，剥夺资源。终止参与死锁的进程，收回它们占有的资源，从而解除死锁。这时又分两种情况：
-
-   + 一次性撤消参与死锁的全部进程，剥夺全部资源；
-
-   + 逐步撤消参与死锁的进程，逐步收回死锁进程占有的资源。
-
-     > 选择逐步撤消的进程时要按照一定的原则进行，目的是撤消那些代价最小的进程：
-     >
-     > + 比如按进程的优先级确定进程的代价；
-     > + 考虑进程运行时的代价和与此进程相关的外部作业的代价等因素；
-
-3. 进程回退策略，让参与死锁的进程回退到没有发生死锁前某一点处，并由此点处继续执行，以求再次执行时不再发生死锁。
-
-   >  虽然这是个较理想的办法，但是操作起来系统开销极大，要有堆栈这样的机构记录进程的每一步变化，以便今后的回退，有时这是无法做到的。
+1. 避免使用嵌套锁
+   + 如果已持有一个锁，就别再获取锁。坚持这个原则的话，使用锁几乎不会导致死锁
+2. 以固定顺序获取锁
+   - 如果必须获取两个或者更多的锁，则用固定顺序获取
+3. 在持有锁时，避免调用用户提供的代码
+   + 因为代码是用户提供的，不知道它会做什么，可能包括获取锁在内的任何事情
 
 ---
 
